--- a/data/cards/06498706.yaml
+++ b/data/cards/06498706.yaml
@@ -122,6 +122,11 @@ sets:
     set_name: Tournament Pack 2023 Vol.4
     rarities:
     - Common
+  - set_number: QCDB-JP055
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Ultra Rare
+    - Secret Rare
   ko:
   - set_number: ETCO-KR071
     set_name: Eternity Code
