--- a/data/cards/38033121.yaml
+++ b/data/cards/38033121.yaml
@@ -90,6 +90,8 @@ images:
 - index: '6.1'
   image: DarkMagicianGirl-MP22-EN-PScR-1E.png
   illustration: DarkMagicianGirl-EN-CA-6.png
+- index: 7
+  image: DarkMagicianGirl-QCCU-JP-OP.png
 sets:
   en:
   - set_number: RDS-ENSE2
@@ -789,6 +791,11 @@ sets:
     set_name: Quarter Century Duelist Box
     rarities:
     - Ultra Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: QCCU-JP002
+    set_name: Quarter Century Chronicle side:Unity
+    rarities:
     - Secret Rare
     - Quarter Century Secret Rare
   ko:
