--- a/data/cards/50277355.yaml
+++ b/data/cards/50277355.yaml
@@ -61,7 +61,7 @@ text:
     Você só pode usar este efeito de "Ponto-ovelha" uma vez por turno.
   ja: |-
     カード名が異なるモンスター２体
-    このカード名の効果は１ターンに１度しか使用できない。①：このカードのリンク先にモンスターが特殊召喚された場合に発動できる。このカードのリンク先のモンスターの種類によって以下の効果を適用する。●儀式：自分はデッキから２枚ドローし、その後手札を２枚選んで捨てる。●融合：自分の墓地からレベル４以下のモンスター１体を選んで特殊召喚する。●Ｓ：自分フィールドの全てのモンスターの攻撃力は７００アップする。●Ｘ：相手フィールドの全てのモンスターの攻撃力は７００ダウンする。
+    このカード名の効果は１ターンに１度しか使用できない。①：このカードのリンク先にモンスターが特殊召喚された場合に発動できる。このカードのリンク先のモンスターの種類によって以下の効果をそれぞれ適用する。●儀式：自分は２枚ドローする。その後、自分の手札を２枚選んで捨てる。●融合：自分の墓地からレベル４以下のモンスター１体を特殊召喚する。●Ｓ：自分フィールドの全てのモンスターの攻撃力は７００アップする。●Ｘ：相手フィールドの全てのモンスターの攻撃力は７００ダウンする。
   ko: |-
     카드명이 다른 몬스터 2장
     이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 링크 앞에 몬스터가 특수 소환되었을 경우에 발동할 수 있다. 이 카드의 링크 앞의 몬스터 종류에 따라 이하의 효과를 적용한다.
@@ -161,6 +161,11 @@ sets:
     set_name: Ignition Assault
     rarities:
     - Common
+  - set_number: QCDB-JP047
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: IGAS-KR047
     set_name: Ignition Assault
