--- a/data/cards/55262310.yaml
+++ b/data/cards/55262310.yaml
@@ -7,7 +7,7 @@ name:
   fr: Attraction-Étonnante Course Rapide
   it: Corse Rapide Attrazione Prodigio
   pt: Divertida Atração Corrida Rápida
-  ja: <ruby>Ａ・Ɐ・ＲＲ<rt>アメイズ・アトラクション・ラピッドレーシング</rt></ruby>
+  ja: <ruby>Ａ・∀・ＲＲ<rt>アメイズ・アトラクション・ラピッドレーシング</rt></ruby>
   ja_romaji: Ameizu Atorakushon Rapiddo Rēshingu
   ko: <ruby>A・∀・RR<rt>어메이즈 어트랙션 라피도레이싱</rt></ruby>
   ko_rr: Eomeijeu Eoteuraeksyeon Rapidoreising
