--- a/data/cards/64964750.yaml
+++ b/data/cards/64964750.yaml
@@ -90,6 +90,11 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Common
+  - set_number: QCDB-JP057
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: BACH-KR063
     set_name: Battle of Chaos
