--- a/data/cards/08267140.yaml
+++ b/data/cards/08267140.yaml
@@ -314,6 +314,11 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystals'
     rarities:
     - Common
+  - set_number: QCDB-JP051
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: TDIL-KR065
     set_name: The Dark Illusion
