--- a/data/cards/13117073.yaml
+++ b/data/cards/13117073.yaml
@@ -34,7 +34,7 @@ text:
     Se este card for Invocado por Invocação-Link: você pode descartar 1 card; durante a Fase Final deste turno, adicione 1 Magia Contínua ou de Campo do seu Cemitério à sua mão. Você só pode usar este efeito de "Bloqueador Barricadaborg" uma vez por turno. Magias com a face para cima que você controla não podem ser destruídas pelos efeitos de card do seu oponente.
   ja: |-
     カード名が異なるモンスター２体
-    このカード名の①の効果は１ターンに１度しか使用できない。①：このカードがリンク召喚に成功した場合、手札を１枚捨てて発動できる。このターンのエンドフェイズに、自分の墓地から永続魔法カードまたはフィールド魔法カード１枚を選んで手札に加える。②：このカードがモンスターゾーンに存在する限り、自分フィールドの表側表示の魔法カードは相手の効果では破壊されない。
+    このカード名の①の効果は１ターンに１度しか使用できない。①：このカードがＬ召喚した場合、手札を１枚捨てて発動できる。このターンのエンドフェイズに、自分の墓地から永続魔法カードかフィールド魔法カード１枚を手札に加える。②：このカードがモンスターゾーンに存在する限り、自分フィールドの表側表示の魔法カードは相手の効果では破壊されない。
   ko: |-
     카드명이 다른 몬스터 2장
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 링크 소환에 성공했을 경우, 패를 1장 버리고 발동할 수 있다. 이 턴의 엔드 페이즈에, 자신 묘지에서 지속 마법 카드 또는 필드 마법 카드 1장을 고르고 패에 넣는다. ②: 이 카드가 몬스터 존에 존재하는 한, 자신 필드의 앞면 표시의 마법 카드는 상대 효과로는 파괴되지 않는다.
@@ -42,8 +42,8 @@ text:
     卡名不同的怪獸２隻
     此卡名的①效果，１回合僅限使用１次。①：在此卡連結召喚成功的狀況下，可捨棄１張手牌發動。在此回合的結束階段，從我方墓地選擇１張永續魔法卡或場地魔法卡加入手牌。②：只要此卡存在於怪獸區，我方場上的正面表示的魔法卡就不會因對方效果被破壞。
   zh-CN: |-
-    卡名不同的怪兽2只
-    此卡名的①效果1回合仅可使用1次。①：此卡连接召唤成功的情况下，舍弃1张手牌可以发动。在此回合的结束阶段，从自己的墓地挑选1张永续魔法卡或场地魔法卡加入手牌。②：只要此卡存在于怪兽区域，自己场上的表侧表示魔法卡不会因对手的效果被破坏。
+    卡名不同的怪兽２只
+    此卡名的①效果１回合仅可使用１次。①：此卡连接召唤成功的情况下，舍弃１张手牌可以发动。在此回合的结束阶段，从自己的墓地挑选１张永续魔法卡或场地魔法卡加入手牌。②：只要此卡存在于怪兽区域，自己场上的表侧表示魔法卡不会因对手的效果被破坏。
 card_type: Monster
 monster_type_line: Machine / Link / Effect
 attribute: DARK
@@ -124,6 +124,11 @@ sets:
   ja:
   - set_number: WPP1-JP065
     set_name: World Premiere Pack 2020
+    rarities:
+    - Super Rare
+    - Secret Rare
+  - set_number: QCDB-JP046
+    set_name: Quarter Century Duelist Box
     rarities:
     - Super Rare
     - Secret Rare
