--- a/data/cards/49202162.yaml
+++ b/data/cards/49202162.yaml
@@ -52,7 +52,7 @@ text:
     ● Bana 1 card no campo.
   ja: |-
     カード名が異なるモンスター３体
-    ①：レベル７以上のモンスターを素材としてリンク召喚したこのカードは相手の効果の対象にならず、相手の効果では破壊されない。②：このカードが戦闘で相手モンスターを破壊した時、以下の効果から１つを選択して発動できる。●このカードの攻撃力は１５００アップする。●このカードは次の自分ターンのバトルフェイズ中に２回攻撃できる。●フィールドのカード１枚を選んで除外する。
+    ①：このカードがレベル７以上のモンスターを素材としてＬ召喚している場合、このカードは相手の効果では破壊されず、相手はこのカードを効果の対象にできない。②：このカードが戦闘で相手モンスターを破壊した時、以下の効果から１つを選択して発動できる。●このカードの攻撃力は１５００アップする。●このカードは次の自分ターンのバトルフェイズ中に２回攻撃できる。●フィールドのカード１枚を除外する。
   ko: |-
     카드명이 다른 몬스터 3장
     ①: 레벨 7 이상의 몬스터를 소재로서 링크 소환한 이 카드는 상대 효과의 대상이 되지 않으며, 상대 효과로는 파괴되지 않는다. ②: 이 카드가 전투로 상대 몬스터를 파괴했을 때, 이하의 효과에서 1개를 선택하고 발동할 수 있다.
@@ -67,10 +67,7 @@ text:
     ●選擇將場上的１張卡除外。
   zh-CN: |-
     卡名不同的怪兽３只
-    ①：以等级７以上的怪兽为素材连接召唤的此卡不会成为对手效果的对象，也不会因对手的效果而被破坏。②：此卡战斗破坏对手怪兽时，可从以下效果中选择１个发动。
-    ●此卡的攻击力上升１５００。
-    ●在下一个自己回合的战斗阶段中，此卡可攻击２次。
-    ●挑选场上的１张卡除外。
+    ①：以等级７以上的怪兽为素材连接召唤的此卡不会成为对手效果的对象，也不会因对手的效果而被破坏。②：此卡战斗破坏对手怪兽时，可从以下效果中选择１个发动。●此卡的攻击力上升１５００。●在下一个自己回合的战斗阶段中，此卡可攻击２次。●挑选场上的１张卡除外。
 card_type: Monster
 monster_type_line: Warrior / Link / Effect
 attribute: EARTH
@@ -183,6 +180,12 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: QCDB-JP045
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: LVP2-KR001
     set_name: LINK VRAINS Pack 2
