--- a/data/cards/59859086.yaml
+++ b/data/cards/59859086.yaml
@@ -106,6 +106,11 @@ sets:
     set_name: Eternity Code
     rarities:
     - Rare
+  - set_number: QCDB-JP049
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: ETCO-KR048
     set_name: Eternity Code
