--- a/data/cards/65681983.yaml
+++ b/data/cards/65681983.yaml
@@ -27,13 +27,13 @@ text:
   pt: |-
     Declare 1 nome de card; bana 1 dos cards declarado do seu Deck Principal e, se isso acontecer, até o final deste turno, negue seus efeitos, assim como os efeitos ativados e efeitos no campo de cards com o mesmo nome original. Você só pode ativar 1 "Designador de Crossout" por turno.
   ja: |-
-    このカード名のカードは１ターンに１枚しか発動できない。①：カード名を１つ宣言して発動できる。宣言したカード１枚をデッキから除外する。ターン終了時まで、この効果で除外したカード及びそのカードと元々のカード名が同じカードの効果は無効化される。
+    このカード名のカードは１ターンに１枚しか発動できない。①：カード名を１つ宣言して発動できる。宣言したカード１枚をデッキから除外する。このターン中、この効果で除外したカード及びそのカードと元々のカード名が同じカードの効果は無効化される。
   ko: |-
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 카드명을 1개 선언하고 발동할 수 있다. 선언한 카드 1장을 덱에서 제외한다. 턴 종료시까지, 이 효과로 제외한 카드 및 그 카드와 원래의 카드명이 같은 카드의 효과는 무효화된다.
   zh-TW: |-
     此卡名的卡１回合僅限發動１張。①：可宣言１個卡名發動。將１張宣言的卡從牌組除外。在回合結束前，透過此效果除外的卡及與該卡原本的卡名相同的卡的效果無效化。
   zh-CN: |-
-    此卡名的卡1回合仅可发动1张。①：宣言1个卡名可以发动。将1张宣言的卡从牌组除外。直至回合结束时为止，以此效果除外的卡及与该卡原本卡名相同的卡之效果均被无效化。
+    此卡名的卡１回合仅可发动１张。①：宣言１个卡名可以发动。将１张宣言的卡从牌组除外。直至回合结束时为止，以此效果除外的卡及与该卡原本卡名相同的卡之效果均被无效化。
 card_type: Spell
 property: Quick-Play
 series:
@@ -106,6 +106,12 @@ sets:
     set_name: Premium Pack 2021
     rarities:
     - Secret Rare
+  - set_number: QCDB-JP053
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: PP14-KRB35
     set_name: Premium Pack Vol.14 2nd Wave
