--- a/data/cards/74677422.yaml
+++ b/data/cards/74677422.yaml
@@ -65,6 +65,8 @@ images:
 - index: 7
   image: RedEyesBlackDragon-MP22-EN-PScR-1E.png
   illustration: RedEyesBlackDragon-OW-4.png
+- index: 8
+  image: RedEyesBlackDragon-QCCP-JP-OP.png
 sets:
   en:
   - set_number: PCJ-EN001
