--- a/data/cards/80312545.yaml
+++ b/data/cards/80312545.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Quando este card for ativado: adicione 1 "Uria, o Senhor das Chamas Cortantes", "Hamon, o Senhor do Trovão Impactante" ou "Raviel, o Senhor dos Fantasmas", OU 1 monstro que liste especificamente qualquer um desses cards em seu texto, do seu Deck à sua mão. Uma vez por turno: você pode descartar 1 card; Invoque por Invocação-Especial 1 monstro Demônio com 0 de ATK/DEF do seu Cemitério. Uma vez por turno, se você controlar um monstro de Nível 10: você pode adicionar 1 Magia Contínua do seu Cemitério à sua mão. Você só pode ativar 1 "Abertura dos Portões Espirituais" por turno.
   ja: |-
-    このカード名のカードは１ターンに１枚しか発動できない。①：このカードの発動時の効果処理として、「神炎皇ウリア」「降雷皇ハモン」「幻魔皇ラビエル」のいずれか１体、またはそのいずれかのカード名が記されたモンスター１体をデッキから手札に加える。②：１ターンに１度、手札を１枚捨てて発動できる。自分の墓地から攻撃力と守備力が０の悪魔族モンスター１体を選んで特殊召喚する。③：１ターンに１度、自分フィールドにレベル１０モンスターが存在する場合に発動できる。自分の墓地から永続魔法カード１枚を選んで手札に加える。
+    このカード名のカードは１ターンに１枚しか発動できない。①：このカードの発動時の効果処理として、「神炎皇ウリア」「降雷皇ハモン」「幻魔皇ラビエル」のいずれか１体、またはそのいずれかのカード名が記されたモンスター１体をデッキから手札に加える。②：１ターンに１度、手札を１枚捨てて発動できる。自分の墓地から攻撃力と守備力が０の悪魔族モンスター１体を特殊召喚する。③：１ターンに１度、自分フィールドにレベル１０モンスターが存在する場合に発動できる。自分の墓地から永続魔法カード１枚を手札に加える。
   ko: |-
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 이 카드의 발동시의 효과 처리로서, "신염황제 우리아" "번개황제 하몬" "환마황제 라비엘" 중 어느 1장, 또는 그 어느 카드명이 쓰여진 몬스터 1장을 덱에서 패에 넣는다. ②: 1턴에 1번, 패를 1장 버리고 발동할 수 있다. 자신 묘지에서 공격력과 수비력이 0 인 악마족 몬스터 1장을 고르고 특수 소환한다. ③: 1턴에 1번, 자신 필드에 레벨 10 몬스터가 존재할 경우에 발동할 수 있다. 자신 묘지에서 지속 마법 카드 1장을 고르고 패에 넣는다.
   zh-TW: |-
@@ -93,6 +93,8 @@ sets:
   - set_number: QCDB-JP056
     set_name: Quarter Century Duelist Box
     rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: SD38-KR020
     set_name: 'Structure Deck: Sacred Beasts of Chaos'
