--- a/data/cards/86066372.yaml
+++ b/data/cards/86066372.yaml
@@ -34,7 +34,7 @@ text:
     Seu oponente não pode ativar cards ou efeitos em resposta às ativações de efeitos deste card. Se este card for Invocado por Invocação-Link: você pode escolher 1 Monstro Link que foi usado como matéria para sua Invocação-Link; este card ganha ATK igual ao Valor Link desse monstro x 1000. Você pode banir 1 Monstro Link do seu campo ou Cemitério; destrua 1 card que seu oponente controla e, além disso, pelo resto deste turno, você não pode banir monstros com o mesmo Atributo para ativar este efeito de "Acessocodificar Transmissor".
   ja: |-
     効果モンスター２体以上
-    このカードの効果の発動に対して相手は効果を発動できない。①：このカードがリンク召喚に成功した場合、そのリンク素材としたリンクモンスター１体を対象として発動できる。このカードの攻撃力は、そのモンスターのリンクマーカーの数×１０００アップする。②：自分のフィールド・墓地からリンクモンスター１体を除外して発動できる。相手フィールドのカード１枚を選んで破壊する。このターン、自分の「アクセスコード・トーカー」の効果を発動するために同じ属性のモンスターを除外する事はできない。
+    このカードの効果の発動に対して相手は効果を発動できない。①：このカードがＬ召喚した場合、そのＬ素材としたＬモンスター１体を対象として発動できる。このカードの攻撃力は、そのモンスターのリンクマーカーの数×１０００アップする。②：自分のフィールド・墓地からＬモンスター１体を除外して発動できる。相手フィールドのカード１枚を破壊する。このターン、自分は「アクセスコード・トーカー」の効果を発動するために同じ属性のモンスターを除外できない。
   ko: |-
     효과 몬스터 2장 이상
     이 카드의 효과의 발동에 대하여 상대는 효과를 발동할 수 없다. ①: 이 카드가 링크 소환에 성공했을 경우, 그 링크 소재로 한 링크 몬스터 1장을 대상으로 하고 발동할 수 있다. 이 카드의 공격력은, 그 몬스터의 링크 마커의 수 × 1000 올린다. ②: 자신의 필드 / 묘지에서 링크 몬스터 1장을 제외하고 발동할 수 있다. 상대 필드의 카드 1장을 고르고 파괴한다. 이 턴에, 자신의 "액세스코드 토커"의 효과를 발동하기 위해 같은 속성의 몬스터를 제외할 수 없다.
@@ -43,7 +43,7 @@ text:
     針對此卡效果的發動，對方無法發動效果。①：在此卡連結召喚成功的狀況下，可將１隻做為該連結素材的連結怪獸做為對象發動。此卡的攻擊力依據該怪獸的連結符號數量×１０００進行提升。②：可將我方場上・墓地的１隻連結怪獸除外發動。選擇對方場上的１張卡破壞。此回合，無法為發動我方「存取碼語者」的效果將屬性相同的怪獸除外。
   zh-CN: |-
     效果怪兽2只以上
-    应对此卡效果的发动，对手不可发动效果。①：此卡连接召唤成功的情况下，以作为该连接素材的1只连接怪兽为对象可以发动。此卡的攻击力上升相当于该怪兽连接标记数量×1000的数值。②：从自己场上・墓地将1只连接怪兽除外可以发动。挑选对手场上的1张卡破坏。此回合，不可为发动自己的"访问码语者"的效果而将相同属性的怪兽除外。
+    应对此卡效果的发动，对手不可发动效果。①：此卡连接召唤成功的情况下，以作为该连接素材的1只连接怪兽为对象可以发动。此卡的攻击力上升相当于该怪兽连接标记数量×1000的数值。②：从自己场上・墓地将1只连接怪兽除外可以发动。挑选对手场上的1张卡破坏。此回合，不可为发动自己的“访问码语者”的效果而将相同属性的怪兽除外。
 card_type: Monster
 monster_type_line: Cyberse / Link / Effect
 attribute: DARK
@@ -149,6 +149,12 @@ sets:
     set_name: Secret Utility Box
     rarities:
     - Secret Rare
+  - set_number: QCDB-JP048
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: ETCO-KR046
     set_name: Eternity Code
