--- a/data/cards/01833916.yaml
+++ b/data/cards/01833916.yaml
@@ -7,7 +7,7 @@ name:
   fr: Challenger Héroïque - Mille Lames
   it: Sfidante Eroico - Mille Lame
   pt: Desafiante Heroico - Mil Lâminas
-  ja: <ruby>Ｈ<rt>ヒロイック</rt></ruby>・<ruby>Ｃ<rt>チャレンジャ</rt></ruby> サウザンド・ブレード
+  ja: <ruby>Ｈ<rt>ヒロイック</rt></ruby>・<ruby>Ｃ<rt>チャレンジャー</rt></ruby> サウザンド・ブレード
   ja_romaji: Hiroikku Charenja Sauzando Burēdo
   ko: <ruby>H·C<rt>히로익 챌린저</rt></ruby> 사우전드 블레이드
   ko_rr:
