--- a/data/cards/16769305.yaml
+++ b/data/cards/16769305.yaml
@@ -7,7 +7,7 @@ name:
   fr: Bolide Turbo Contaminé GT19
   it: GT19 Hot Rod Turbo-Contaminata
   pt: Hot Rod Turbo-Maculado GT19
-  ja: <ruby>魔界造車<rt>デスチューン</rt></ruby>－<ruby>Ｇ<rt>ジー</rt></ruby><ruby>Ｔ<rt>ティー</rt></ruby><ruby>１<rt>イチ</rt></ruby><ruby>９<rt>キュー</rt></ruby>
+  ja: <ruby>魔界造車<rt>デスチューン</rt></ruby>－<ruby>Ｇ<rt>ジー</rt></ruby><ruby>Ｔ<rt>ティ</rt></ruby><ruby>１<rt>イチ</rt></ruby><ruby>９<rt>キュー</rt></ruby>
   ja_romaji: Desuchūn - Jī Tī Ichi Kyū
   ko: 데스튠－<ruby>G<rt>지</rt></ruby><ruby>T<rt>티</rt></ruby><ruby>1<rt>얼</rt></ruby><ruby>9<rt>구</rt></ruby>
   ko_rr: Deseutyun - Ji Ti Eol Gu
