--- a/data/cards/48486809.yaml
+++ b/data/cards/48486809.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 19719
+password: 48486809
 name:
   en: Winged Kuriboh LV6
   de:
@@ -22,7 +22,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名はルール上「Ｅ・ＨＥＲＯ」カード、「フェイバリット」カードとしても扱う。このカードは通常召喚できない。「ハネクリボー ＬＶ６」は１ターンに１度、自分の手札・フィールド（表側表示）・墓地の、「Ｅ・ＨＥＲＯ」融合モンスターか「ハネクリボー」１体を除外した場合のみ手札・墓地から特殊召喚できる。①：相手モンスターの攻撃宣言時、または相手がフィールドのモンスターの効果を発動した時、このカードをリリースして発動できる。そのモンスター１体を破壊し、その元々の攻撃力分のダメージを相手に与える。
   ko:
   zh-TW:
   zh-CN:
@@ -41,7 +42,7 @@ series:
 - Winged Kuriboh
 images:
 - index: 1
-  image: WingedKuribohLV6-QCDB-JP-OP.png
+  image: WingedKuribohLV6-QCDB-JP-UR.png
 sets:
   ja:
   - set_number: QCDB-JP002
@@ -49,13 +50,13 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+    - Quarter Century Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
   text:
     en: true
 yugipedia_page_id: 1020600
-fake_password: 100302002
