--- a/data/cards/48654267.yaml
+++ b/data/cards/48654267.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 19722
+password: 48654267
 name:
   en: Supreme King Z-ARC - Synchro Universe
   de:
@@ -22,7 +22,9 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    チューナー＋チューナー以外の闇属性Ｐモンスター１体以上
+    ①：このカードはモンスターゾーンに存在する限り、カード名を「覇王龍ズァーク」として扱う。②：このカードが、戦闘で相手モンスターを破壊したダメージ計算後、または相手に戦闘ダメージを与えた時に発動できる。自分のデッキ・ＥＸデッキ・墓地から「覇王眷竜」モンスターを２体まで守備表示で特殊召喚する。③：モンスターゾーンのこのカードが戦闘・効果で破壊された場合に発動できる。このカードを自分のＰゾーンに置く。
   ko:
   zh-TW:
   zh-CN:
@@ -41,7 +43,8 @@ pendulum_effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名のＰ効果は１ターンに１度しか使用できない。①：自分フィールドの、「覇王眷竜」Ｐモンスターか「覇王門」Ｐモンスター１体をリリースして発動できる。このカードを特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
@@ -50,7 +53,7 @@ series:
 - Synchro
 images:
 - index: 1
-  image: SupremeKingZARCSynchroUniverse-QCDB-JP-OP.png
+  image: SupremeKingZARCSynchroUniverse-QCDB-JP-UR.png
 sets:
   ja:
   - set_number: QCDB-JP005
@@ -58,13 +61,13 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+    - Quarter Century Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
   text:
     en: true
 yugipedia_page_id: 1025570
-fake_password: 100302005
