--- a/data/cards/74677422.yaml
+++ b/data/cards/74677422.yaml
@@ -67,6 +67,7 @@ images:
   illustration: RedEyesBlackDragon-OW-4.png
 - index: 8
   image: RedEyesBlackDragon-QCCP-JP-OP.png
+  illustration: RedEyesBlackDragon-CA-8.png
 sets:
   en:
   - set_number: PCJ-EN001
