--- a/data/cards/84013237.yaml
+++ b/data/cards/84013237.yaml
@@ -68,6 +68,7 @@ images:
   illustration: Number39Utopia-OW-3.png
 - index: 4
   image: Number39Utopia-CCC1-JP-NPR.png
+  illustration: Number39Utopia-CA-4.png
 sets:
   en:
   - set_number: YS11-EN041
