--- a/data/cards/97317530.yaml
+++ b/data/cards/97317530.yaml
@@ -7,7 +7,7 @@ name:
   fr: Kalantosa, Bête Mystique de la Forêt
   it: Kalantosa, Bestia Mistica della Foresta
   pt: Kalantosa, Besta Mística da Floresta
-  ja: <ruby>森<rt>もリ</rt></ruby>の<ruby>聖<rt>せい</rt></ruby><ruby>獣<rt>じゅう</rt></ruby> カラントーサ
+  ja: <ruby>森<rt>もり</rt></ruby>の<ruby>聖<rt>せい</rt></ruby><ruby>獣<rt>じゅう</rt></ruby> カラントーサ
   ja_romaji: Mori no Seijū Karantōsa
   ko: 숲의 성수 카란토사
   ko_rr:
