--- a/data/cards/05043010.yaml
+++ b/data/cards/05043010.yaml
@@ -68,6 +68,7 @@ images:
   illustration: FirewallDragon-OW-3.png
 - index: 4
   image: FirewallDragon-CCC1-JP-NPR.png
+  illustration: FirewallDragon-CA-4.png
 sets:
   en:
   - set_number: COTD-EN043
