--- a/data/cards/24269961.yaml
+++ b/data/cards/24269961.yaml
@@ -7,7 +7,7 @@ name:
   fr: Âme Désenchaînée du Seigneur de Yama
   it: Anima Svincolata Signore di Yama
   pt: Senhor da Alma Desacorrentada de Yama
-  ja: <ruby>破<rt>は</rt></ruby><ruby>械<rt>かい</rt></ruby><ruby>神<rt>しん</rt></ruby><ruby>王<rt>おう</rt></ruby>ヤマ
+  ja: <ruby>破<rt>は</rt></ruby><ruby>械<rt>かい</rt></ruby><ruby>神<rt>しん</rt></ruby><ruby>王<rt>のう</rt></ruby>ヤマ
   ja_romaji: Hakaishin'ō Yama
   ko: 언체인드소울킹 야마
   ko_rr: Eoncheindeusoulking Yama
