--- a/data/cards/38033121.yaml
+++ b/data/cards/38033121.yaml
@@ -92,6 +92,7 @@ images:
   illustration: DarkMagicianGirl-EN-CA-6.png
 - index: 7
   image: DarkMagicianGirl-QCCU-JP-OP.png
+  illustration: DarkMagicianGirl-CA-7.png
 sets:
   en:
   - set_number: RDS-ENSE2
