--- a/data/cards/74652966.yaml
+++ b/data/cards/74652966.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 19723
+password: 74652966
 name:
   en: Code of Soul
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドにＬモンスターが存在する場合に発動できる。このカードを手札から特殊召喚する。②：自分メインフェイズに発動できる。このターン、自分が「サラマングレイト」ＬモンスターをＬ召喚する場合に１度、自分フィールドの同名の「サラマングレイト」Ｌモンスター１体のみを素材としてＬ召喚できる。③：相手メインフェイズに、墓地のこのカードを除外して発動できる。リンク３以上のサイバース族Ｌモンスター１体のＬ召喚を行う。
   ko:
   zh-TW:
   zh-CN:
@@ -33,7 +34,7 @@ atk: 500
 def: 500
 images:
 - index: 1
-  image: CodeofSoul-QCDB-JP-OP.png
+  image: CodeofSoul-QCDB-JP-UR.png
 sets:
   ja:
   - set_number: QCDB-JP006
@@ -41,13 +42,13 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+    - Quarter Century Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
   text:
     en: true
 yugipedia_page_id: 1025573
-fake_password: 100302006
