--- a/data/cards/75874514.yaml
+++ b/data/cards/75874514.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 19720
+password: 75874514
 name:
   en: Shining Star Dragon
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①の効果は１ターンに１度しか使用できない。①：このカードが手札に存在する場合、相手メインフェイズに、自分の墓地のドラゴン族Ｓモンスター１体を対象として発動できる。このカードを特殊召喚し、対象のモンスターを効果を無効にして特殊召喚する。その後、このカードを含む自分フィールドのモンスターを素材としてドラゴン族Ｓモンスター１体のＳ召喚を行う事ができる。②：このカードをＳ素材としてドラゴン族ＳモンスターをＳ召喚した場合、そのＳモンスターは戦闘では破壊されない。
   ko:
   zh-TW:
   zh-CN:
@@ -33,7 +34,7 @@ atk: 0
 def: 0
 images:
 - index: 1
-  image: ShiningStarDragon-QCDB-JP-OP.png
+  image: ShiningStarDragon-QCDB-JP-UR.png
 sets:
   ja:
   - set_number: QCDB-JP003
@@ -41,13 +42,13 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+    - Quarter Century Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
   text:
     en: true
 yugipedia_page_id: 1020602
-fake_password: 100302003
