--- a/data/rush/19580.yaml
+++ b/data/rush/19580.yaml
@@ -44,6 +44,8 @@ attribute: LIGHT
 level: 3
 atk: 1000
 def: 1000
+series:
+- Psychic Musician
 images:
 - index: 1
   image: OrdolltheAdorableAudioIdol-RDMRP2-JP-SR.png
