--- a/rush.yaml
+++ b/rush.yaml
@@ -85247,6 +85247,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- High Tech Dragon
 images:
 - index: 1
   image: SitePreview-RDKP11-JP-R.png
@@ -119799,6 +119801,8 @@ attribute: LIGHT
 level: 3
 atk: 1000
 def: 1000
+series:
+- Psychic Musician
 images:
 - index: 1
   image: OrdolltheAdorableAudioIdol-RDMRP2-JP-SR.png
