--- a/data/cards/23434538.yaml
+++ b/data/cards/23434538.yaml
@@ -220,6 +220,11 @@ sets:
     - Secret Rare
     - Extra Secret Rare
     - Quarter Century Secret Rare
+  - set_number: QCDB-JP015
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: EXP4-KR037
     set_name: Extra Pack Volume 4
