--- a/data/cards/23434538.yaml
+++ b/data/cards/23434538.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Durante o turno de qualquer duelista: você pode enviar este card da sua mão para o Cemitério; neste turno, sempre que seu oponente Invocar um ou mais monstros por Invocação-Especial, imediatamente compre 1 card. Você só pode usar 1 ""C" Maxx" por turno.
   ja: |-
-    このカード名の効果は１ターンに１度しか使用できない。①：自分、相手ターンに、このカードを手札から墓地へ送って発動できる。このターン中、以下の効果を適用する。●相手がモンスターの特殊召喚する度に、自分は１枚ドローする。
+    このカード名の効果は１ターンに１度しか使用できない。①：自分・相手ターンに、このカードを手札から墓地へ送って発動できる。このターン中、以下の効果を適用する。●相手がモンスターを特殊召喚する度に、自分は１枚ドローする。
   ko: |-
     이 카드명의 효과는 1턴에 1번밖에 사용할 수 없으며, 상대 턴에도 발동할 수 있다. ①: 이 카드를 패에서 묘지로 보내고 발동할 수 있다. 이 턴에, 이하의 효과를 적용한다. ●상대가 몬스터의 특수 소환에 성공할 때마다, 자신은 덱에서 1장 드로우한다.
   zh-TW: |-
