--- a/rush.yaml
+++ b/rush.yaml
@@ -129717,3 +129717,206 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1035869
+---
+konami_id:
+name:
+  en: Transamu Praime Full Armor Nova
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: トランザム・プライム・フルアーマーノヴァ
+  ja_romaji: Toranzamu Puraimu Furuāmānova
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    This card gains ATK equal to [the number of different Types in both players' Graveyards] x 300. If there are 5 or more different Types in the Graveyards, this card cannot be destroyed by your opponent's card effects, also it gains additional 3000 ATK, if there are 10 or more different Types in the Graveyards.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Fusion / Effect
+attribute: LIGHT
+level: 9
+atk: 3000
+def: 1600
+materials:
+  en: |-
+    "Transamu Praime Armor Nova" + "Transamu Rainac"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Praime
+- Transamu
+images:
+- index: 1
+  image: TransamuPraimeFullArmorNova-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP039
+    set_name: Transamu of Transcendence
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1036338
+---
+konami_id:
+name:
+  en: Praime Dwarf
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: プライム・ドワーフ
+  ja_romaji: Puraimu Dowāfu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send 1 monster from your field to the Graveyard. Then, you can shuffle 3 LIGHT Attribute monsters with different Types from your Graveyard into the Deck. If you do, you can Fusion Summon 1 LIGHT Attribute monster by sending face-up LIGHT Attribute monsters from either field to the Graveyard as material.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Effect
+attribute: LIGHT
+level: 1
+atk: 0
+def: 0
+series:
+- Praime
+images:
+- index: 1
+  image: PraimeDwarf-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP001
+    set_name: Transamu of Transcendence
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1036340
+---
+konami_id:
+name:
+  en: Interspraime
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: インタースプライム
+  ja_romaji: Intāsupuraimu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If the only monsters in your Graveyard are LIGHT Attribute, reveal 1 Level 7 or 8 Effect Monster in your hand to your opponent.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top 3 cards of your Deck to the Graveyard. Then, you can add 1 "Transamu Praime Armor Nova" or 1 "Transamu Rainac" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Effect
+attribute: LIGHT
+level: 1
+atk: 1000
+def: 0
+series:
+- Praime
+images:
+- index: 1
+  image: Interspraime-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP003
+    set_name: Transamu of Transcendence
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1036342
