--- a/data/cards/30241314.yaml
+++ b/data/cards/30241314.yaml
@@ -38,7 +38,7 @@ card_type: Trap
 property: Continuous
 images:
 - index: 1
-  image: MacroCosmos-RC02-JP-ScR.png
+  image: MacroCosmos-LART-EN-UR-LE.png
   illustration: MacroCosmos-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: MacroCosmos-BLMR-EN-UR-1E.png
@@ -68,6 +68,10 @@ sets:
     - Secret Rare
   - set_number: BLMR-EN100
     set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
+  - set_number: LART-EN065
+    set_name: The Lost Art Promotion 2023 L
     rarities:
     - Ultra Rare
   - set_number: DR04-EN237
@@ -104,6 +108,10 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
+  - set_number: LART-DE065
+    set_name: The Lost Art Promotion 2023 L
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: EOJ-FR057
     set_name: Enemy of Justice
@@ -124,6 +132,10 @@ sets:
     - Secret Rare
   - set_number: BLMR-FR100
     set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
+  - set_number: LART-FR065
+    set_name: The Lost Art Promotion 2023 L
     rarities:
     - Ultra Rare
   it:
@@ -152,6 +164,10 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
+  - set_number: LART-IT065
+    set_name: The Lost Art Promotion 2023 L
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SGX3-PTF19
     set_name: 'Speed Duel GX: Duelists of Shadows'
@@ -160,6 +176,10 @@ sets:
     - Secret Rare
   - set_number: BLMR-PT100
     set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
+  - set_number: LART-PT065
+    set_name: The Lost Art Promotion 2023 L
     rarities:
     - Ultra Rare
   ja:
