--- a/data/rush/16711.yaml
+++ b/data/rush/16711.yaml
@@ -1,6 +1,6 @@
 konami_id: 16711
 name:
-  en: Rage of the Wild Beasts
+  en: Rage of the Beasts
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: RageoftheWildBeasts-RDLGP1-JP-C.png
+  image: RageoftheBeasts-RDLGP1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP055
@@ -65,8 +65,6 @@ sets:
     rarities:
     - Common
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 716353
