--- a/rush.yaml
+++ b/rush.yaml
@@ -39961,7 +39961,7 @@ yugipedia_page_id: 713689
 ---
 konami_id: 16711
 name:
-  en: Rage of the Wild Beasts
+  en: Rage of the Beasts
   de:
   es:
   fr:
@@ -40005,7 +40005,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: RageoftheWildBeasts-RDLGP1-JP-C.png
+  image: RageoftheBeasts-RDLGP1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP055
@@ -40026,8 +40026,6 @@ sets:
     rarities:
     - Common
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 716353
