--- a/data/cards/29401950.yaml
+++ b/data/cards/29401950.yaml
@@ -422,7 +422,7 @@ sets:
     rarities:
     - Gold Rare
   - set_number: DS14-JPL40
-    set_name: 'Duelist Set: Version Lightlord Judgment Enhancement Pack'
+    set_name: 'Duelist Set: Version Lightsworn Judgment Enhancement Pack'
     rarities:
     - Ultra Rare
   - set_number: SD27-JP038
