--- a/data/cards/yugipedia1036563.yaml
+++ b/data/cards/yugipedia1036563.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Target 1 face-up non-Token monster your opponent controls; Special Summon 1 monster from your hand, Deck, or Extra Deck that has 2 or more of the same Type, Attribute, or ATK (but negate its effects), and if you do, negate the targeted monster's effects, then, if the Summoned monster and the targeted monster have the same name, you can banish both monsters, face-down. Your opponent cannot activate the targeted monster's effects in response to this card's activation. You can only activate 1 "Metaltronios" per turn.
+    Target 1 face-up non-Token Monster your opponent controls; Special Summon 1 monster from your hand, Deck, or Extra Deck that has 2 or more of the same Type, Attribute, and/or ATK (its effects are negated), and if you do, negate the targeted monster's effects, then, if those 2 monsters have the same name, you can banish both, face-down. Your opponent cannot activate the targeted monster's effects in response to this card's activation. You can only activate 1 "Metaltronios" per turn.
   de:
   es:
   fr:
