--- a/data/cards/16435215.yaml
+++ b/data/cards/16435215.yaml
@@ -8,7 +8,7 @@ name:
   it: Trascinato nella Tomba
   pt: Arrastado para a Cova
   ja: <ruby>墓<rt>はか</rt></ruby><ruby>穴<rt>あな</rt></ruby>の<ruby>道<rt>みち</rt></ruby><ruby>連<rt>づ</rt></ruby>れ
-  ja_romaji: Haka'ana no Michizure
+  ja_romaji: Hakaana no Michizure
   ko: 무덤으로의 동반
   ko_rr: Mudeom-euro-ui Dongban
   zh-TW: 墓穴的同路人
