--- a/data/cards/70825459.yaml
+++ b/data/cards/70825459.yaml
@@ -8,7 +8,7 @@ name:
   it: Tracce Trappola
   pt: Rastros de Armadilha
   ja: トラップトラック
-  ja_romaji: Torappu Torakku
+  ja_romaji: Torapputorakku
   ko: 트랩트랙
   ko_rr: Teuraepteuraek
   zh-TW:
