--- a/data/cards/79766336.yaml
+++ b/data/cards/79766336.yaml
@@ -8,7 +8,7 @@ name:
   it: Trappola dell'Oscurità
   pt: Armadilha da Escuridão
   ja: <ruby>闇<rt>やみ</rt></ruby>よりの<ruby>罠<rt>わな</rt></ruby>
-  ja_romaji: Yami-yori no Wana
+  ja_romaji: Yami yori no Wana
   ko: 어둠의 함정
   ko_rr: Eodum-ui Hamjeong
   zh-TW:
