--- a/data/cards/36256625.yaml
+++ b/data/cards/36256625.yaml
@@ -8,7 +8,7 @@ name:
   it: Super Vehicroid Jumbo Drill
   pt: Super Veicroide Perfuratriz Gigante
   ja: スーパービークロイド－ジャンボドリル
-  ja_romaji: Sūpā Bīkuroido - Jambo Doriru
+  ja_romaji: Sūpā Bīkuroido - Janbo Doriru
   ko: 슈퍼 비크로이드 점보 드릴
   ko_rr:
   zh-TW:
