--- a/data/cards/75922381.yaml
+++ b/data/cards/75922381.yaml
@@ -44,7 +44,7 @@ series:
 - Spright
 images:
 - index: 1
-  image: SprightRed-POTE-EN-C-1E.png
+  image: SprightRed-OP21-EN-SR-UE.png
 sets:
   en:
   - set_number: POTE-EN006
