--- a/data/cards/16899564.yaml
+++ b/data/cards/16899564.yaml
@@ -6,7 +6,7 @@ name:
   es: Hermosa Cazacabezas
   fr: Chasseur de Têtes
   it: Cacciatrice di Teste
-  pt:
+  pt: Bela Caçadora-de-Cabeças
   ja: <ruby>斬<rt>ざん</rt></ruby><ruby>首<rt>しゅ</rt></ruby>の<ruby>美<rt>び</rt></ruby><ruby>女<rt>じょ</rt></ruby>
   ja_romaji: Zanshu no Bijo
   ko: 참수의 미녀
@@ -25,7 +25,7 @@ text:
   it: |-
     Creatura feroce che ha decapitato moltissimi mostri avversari.
   pt: |-
-    Uma criatura cruel que já decapitou diversos monstros inimigos.
+    Uma criatura perversa que tem decapitado numerosos monstros inimigos.
   ja: |-
     その美貌とはうらはらに、カタナで数多くの首をはねてきた女。
   ko: |-
