--- a/data/cards/68366996.yaml
+++ b/data/cards/68366996.yaml
@@ -6,7 +6,7 @@ name:
   es: Soldado Géminis
   fr: Soldat Gémeau
   it: Soldato Gemello
-  pt:
+  pt: Soldado Gêmeos
   ja: デュアル・ソルジャー
   ja_romaji: Dyuaru Sorujā
   ko: 듀얼 솔저
@@ -30,8 +30,8 @@ text:
     Questa carta è considerata come un Mostro Normale fino a quando è scoperta sul Terreno o nel Cimitero. Fino a quando questa carta è scoperta sul Terreno, puoi Evocarla Normalmente per considerarla come un Mostro con Effetto con questo effetto:
     ● Una volta per turno, se questa carta sta per essere distrutta in battaglia, invece non viene distrutta. Se questa carta combatte, dopo il calcolo dei danni puoi Evocare Specialmente 1 mostro Gemello di Livello 4 o inferiore dal tuo Deck, eccetto "Soldato Gemello".
   pt: |-
-    Este card é considerado como um Monstro Normal enquanto estiver com a face para cima no campo ou no Cemitério. Enquanto este card estiver com a face para cima no campo, você pode Invocá-lo por Invocação-Normal para que ele seja considerado como um Monstro de Efeito com este efeito:
-    ●Uma vez por turno, se este card seria destruído em batalha, ele não é destruído. Se este card batalhar, depois do cálculo de dano, você pode Invocar por Invocação-Especial 1 monstro Gêmeos de Nível 4 ou menos do seu Deck, exceto "Soldado Gêmeos".
+    Esta carta é tratada como um Monstro Normal enquanto estiver virada para cima no campo ou no Cemitério. Enquanto estiver virada para cima no campo, você pode Invocá-la por Invocação Normal para que ela seja tratada como um Monstro de Efeito com este efeito:
+    ● Uma vez por turno, se esta carta seria destruída em batalha, ela não é destruída. Se esta carta batalha, após o Cálculo de Dano, você pode Invocar por Invocação Especial 1 monstro Gemini de Nível 4 ou menor do seu Deck para o seu lado do campo, exceto "Soldado Gêmeos".
   ja: |-
     このカードは墓地またはフィールド上に表側表示で存在する場合、通常モンスターとして扱う。フィールド上に表側表示で存在するこのカードを通常召喚扱いとして再度召喚する事で、このカードは効果モンスター扱いとなり以下の効果を得る。●このカードは１ターンに１度だけ、戦闘では破壊されない。このカードが戦闘を行う場合、そのダメージ計算後に自分のデッキから「デュアル・ソルジャー」以外のレベル４以下のデュアルモンスター１体を自分フィールド上に特殊召喚する事ができる。
   ko: |-
