--- a/data/cards/16899564.yaml
+++ b/data/cards/16899564.yaml
@@ -2,11 +2,11 @@ konami_id: 4240
 password: 16899564
 name:
   en: Beautiful Headhuntress
-  de: Schöne Kopfjägerin
-  es: Hermosa Cazacabezas
-  fr: Chasseur de Têtes
-  it: Cacciatrice di Teste
-  pt: Bela Caçadora-de-Cabeças
+  de:
+  es:
+  fr:
+  it:
+  pt:
   ja: <ruby>斬<rt>ざん</rt></ruby><ruby>首<rt>しゅ</rt></ruby>の<ruby>美<rt>び</rt></ruby><ruby>女<rt>じょ</rt></ruby>
   ja_romaji: Zanshu no Bijo
   ko: 참수의 미녀
@@ -21,11 +21,11 @@ text:
   es: |-
     Una criatura maligna que ha decapitado a numerosos monstruos enemigos.
   fr: |-
-    Créature redoutable ayant décapité de nombreux monstres ennemis.
+    Une créature vicieuse qui a décapitée plus d'un ennemi.
   it: |-
-    Creatura feroce che ha decapitato moltissimi mostri avversari.
+    Una creatura infida che ha decapitato parecchi mostri nemici.
   pt: |-
-    Uma criatura perversa que tem decapitado numerosos monstros inimigos.
+    Uma criatura cruel que já decapitou diversos monstros inimigos.
   ja: |-
     その美貌とはうらはらに、カタナで数多くの首をはねてきた女。
   ko: |-
