--- a/rush.yaml
+++ b/rush.yaml
@@ -129983,3 +129983,63 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1036493
+---
+konami_id:
+name:
+  en: Mist Assassin
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ミスト・アサシン
+  ja_romaji: Misuto Asashin
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 monster from your field to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add up to 2 "Fusion" and/or "Fusion Cancel" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: WATER
+level: 6
+atk: 1700
+def: 1400
+images:
+- index: 1
+  image: MistAssassin-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP035
+    set_name: Transamu of Transcendence
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1036951
