--- a/data/cards/yugipedia1036953.yaml
+++ b/data/cards/yugipedia1036953.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     Special Summon this card as an Effect Monster (Zombie/DARK/Level 4/ATK 1800/DEF 500) with the following effect (this card is also still a Trap).
     ● Monsters your opponent controls that can attack must attack this card.
-    If this card Special Summoned by this card's effect is destroyed by battle with an opponent's attacking monster: Inflict damage to your opponent equal to double the original ATK of the monster that destroyed it (max. 3000). You can only use each effect of "Zoma the Earthbound Spirit" once per turn.
+    If this card Special Summoned by its own effect is destroyed by battle with an opponent's attacking monster: Inflict damage to your opponent equal to double the original ATK of the monster that destroyed it (max. 3000). You can only use each effect of "Zoma the Earthbound Spirit" once per turn.
   de:
   es:
   fr:
