--- a/data/cards/23309606.yaml
+++ b/data/cards/23309606.yaml
@@ -8,7 +8,7 @@ name:
   it: Inceneritore Infernale
   pt:
   ja: <ruby>炎<rt>えん</rt></ruby><ruby>獄<rt>ごく</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>人<rt>じん</rt></ruby>ヘル・バーナー
-  ja_romaji: Engoku Majin Heru Bānā
+  ja_romaji: Engokumajin Heru Bānā
   ko: 염옥마인 헬 버너
   ko_rr:
   zh-TW:
