--- a/data/cards/03627449.yaml
+++ b/data/cards/03627449.yaml
@@ -63,6 +63,11 @@ sets:
     set_name: 'Tournament Pack: 2nd Season'
     rarities:
     - Rare
+  zh-CN:
+  - set_number: 24SP-SC113
+    set_name: Entry Pack 2024 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
