--- a/data/cards/63941210.yaml
+++ b/data/cards/63941210.yaml
@@ -177,6 +177,11 @@ sets:
     set_name: "Structure Deck: Cyber Style's Successor"
     rarities:
     - Common
+  zh-CN:
+  - set_number: 24SP-SC112
+    set_name: Entry Pack 2024 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
