--- a/data/cards/67692580.yaml
+++ b/data/cards/67692580.yaml
@@ -128,6 +128,10 @@ sets:
     set_name: "Structure Deck: Egyptian Gods' Advent: Slifer the Sky Dragon & Obelisk the Tormentor"
     rarities:
     - Common
+  - set_number: 24SP-SC110
+    set_name: Entry Pack 2024 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
