--- a/data/cards/71829750.yaml
+++ b/data/cards/71829750.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Se este card com a fase para cima for devolvido do Campo para o seu Deck, Invoque por Invocação-Especial 1 monstro de Nível 3 ou inferior do seu Deck.
   ja: |-
-    フィールド上に表側表示で存在するこのカードがデッキに戻った場合、自分のデッキからレベル３以下のモンスター１体を特殊召喚する。
+    ①：表側表示のこのカードがフィールドからデッキに戻った場合に発動する。デッキからレベル３以下のモンスター１体を特殊召喚する。
   ko: |-
     앞면 표시의 이 카드가 필드 위에서 덱으로 되돌아갔을 경우, 레벨 3 이하의 몬스터 1장을 덱에서 특수 소환한다.
   zh-TW: |-
