--- a/data/rush/15942.yaml
+++ b/data/rush/15942.yaml
@@ -43,7 +43,7 @@ effect:
     Ogni giocatore che ha carte in mano manda la sua intera mano al Cimitero, poi pesca carte pari [al numero di carte che ogni giocatore ha mandato al Cimitero con questo effetto].
   pt:
   ja: |-
-    手札があるプレイヤーは、手札を全て墓地へ送る。その後、お互いは［この効果で自身が墓地へ送ったカードの数］だけドローする。
+    手札があるプレイヤーは、手札を全て墓地へ送る。その後、お互いは［この効果で自身の手札から墓地へ送られたカードの数］だけドローする。
   ko: |-
     패가 있는 플레이어는 패를 전부 묘지로 보낸다. 그 후, 양쪽 플레이어는 [이 효과로 자신이 묘지로 보낸 카드의 수]만큼 드로우한다.
   zh-TW:
