--- a/data/cards/00425934.yaml
+++ b/data/cards/00425934.yaml
@@ -130,6 +130,11 @@ sets:
     set_name: Expert Edition Volume.1
     rarities:
     - Common
+  zh-CN:
+  - set_number: 24SP-SC107
+    set_name: Entry Pack 2024 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
