--- a/data/cards/03717252.yaml
+++ b/data/cards/03717252.yaml
@@ -184,6 +184,10 @@ sets:
     set_name: 'Structure Deck: Rebirth of Shaddoll'
     rarities:
     - Common
+  - set_number: 24SP-SC102
+    set_name: Entry Pack 2024 Vol.1
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
