--- a/data/cards/05560911.yaml
+++ b/data/cards/05560911.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Se este card estiver na sua mão ou no Cemitério: você pode pagar metade dos seus PV e, depois, escolher 1 monstro que você controla de Nível 6 ou menos; Invoque este card por Invocação-Especial e, se isso acontecer, o Nível deste card é reduzido pelo Nível do monstro alvo e, além disso, coloque este card no fundo do Deck se ele deixar o campo. Você só pode usar este efeito de "Destrudo, o Frisson do Dragão Perdido" uma vez por turno.
   ja: |-
-    このカード名の効果は１ターンに１度しか使用できない。①：このカードが手札・墓地に存在する場合、ＬＰを半分払い、自分フィールドのレベル６以下のモンスター１体を対象として発動できる。このカードを特殊召喚する。この効果で特殊召喚したこのカードは、レベルが対象のモンスターのレベル分だけ下がり、フィールドから離れた場合に持ち主のデッキの一番下に戻る。
+    このカード名の効果は１ターンに１度しか使用できない。①：このカードが手札・墓地に存在する場合、ＬＰを半分払い、自分フィールドのレベル６以下のモンスター１体を対象として発動できる。このカードを特殊召喚する。この効果で特殊召喚したこのカードは、レベルが対象のモンスターのレベル分だけ下がり、フィールドから離れた場合にデッキの一番下に戻る。
   ko: |-
     이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 패 / 묘지에 존재할 경우, LP를 절반 지불하고, 자신 필드의 레벨 6 이하의 몬스터 1장을 대상으로 하여 발동할 수 있다. 이 카드를 특수 소환한다. 이 효과로 특수 소환한 이 카드는, 레벨이 대상 몬스터의 레벨만큼만 내려가고, 필드에서 벗어났을 경우에 주인의 덱 맨 아래로 되돌아간다.
   zh-TW: |-
