--- a/data/cards/05592689.yaml
+++ b/data/cards/05592689.yaml
@@ -76,6 +76,11 @@ sets:
     set_name: Phantom Darkness
     rarities:
     - Common
+  zh-CN:
+  - set_number: 24SP-SC108
+    set_name: Entry Pack 2024 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
