--- a/data/cards/09464441.yaml
+++ b/data/cards/09464441.yaml
@@ -120,6 +120,10 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: 24SP-SC116
+    set_name: Entry Pack 2024 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
