--- a/data/cards/13893596.yaml
+++ b/data/cards/13893596.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Não pode ser Invocado por Invocação-Normal/Baixado. Você deve Invocá-lo por Invocação-Especial (da sua mão) ao embaralhar todos os monstros do seu Cemitério no Deck e não pode Invocá-lo por Invocação-Especial de nenhuma outra forma. Quando este card declarar um ataque: envie 1 monstro da sua mão ou do Deck para o Cemitério. Este card ganha 1000 de ATK para cada Monstro Normal no seu Cemitério. Se este card com a face para cima deixaria o campo, em vez disso, bana-o. Se houver 5 cards "O Proibido" diferentes no seu Cemitério que foram enviados para lá pelo efeito deste card, você vence o Duelo.
   ja: |-
-    このカードは通常召喚できない。自分の墓地のモンスターを全てデッキに戻した場合のみ特殊召喚できる。このカードの②の効果で「封印されし」モンスター５種類が自分の墓地へ送られ全て揃った時、自分はデュエルに勝利する。①：このカードの攻撃力は、自分の墓地の通常モンスターの数×１０００アップする。②：このカードの攻撃宣言時に発動する。手札・デッキからモンスター１体を墓地へ送る。③：表側表示のこのカードはフィールドから離れた場合に除外される。
+    このカードは通常召喚できない。自分の墓地のモンスターを全てデッキ・ＥＸデッキに戻した場合のみ特殊召喚できる。このカードの②の効果で「封印されし」モンスター５種類が自分の墓地へ送られ全て揃った時、自分はデュエルに勝利する。①：このカードの攻撃力は、自分の墓地の通常モンスターの数×１０００アップする。②：このカードの攻撃宣言時に発動する。手札・デッキからモンスター１体を墓地へ送る。③：表側表示のこのカードはフィールドから離れた場合に除外される。
   ko: |-
     이 카드는 통상 소환할 수 없다. 자신 묘지의 몬스터를 전부 덱으로 되돌렸을 경우에만 특수 소환할 수 있다. 이 카드의 ②의 효과로 "봉인된" 몬스터 5종류가 자신 묘지로 보내져 전부 모였을 때, 자신은 듀얼에서 승리한다. ①: 이 카드의 공격력은, 자신 묘지의 일반 몬스터의 수 × 1000 올린다. ②: 이 카드의 공격 선언시에 발동한다. 패 / 덱에서 몬스터 1장을 묘지로 보낸다. ③: 앞면 표시의 이 카드는 필드에서 벗어났을 경우에 제외된다.
   zh-TW: |-
