--- a/data/cards/14536035.yaml
+++ b/data/cards/14536035.yaml
@@ -191,6 +191,11 @@ sets:
     set_name: 'Structure Deck: Pendulum Domination'
     rarities:
     - Common
+  zh-CN:
+  - set_number: 24SP-SC109
+    set_name: Entry Pack 2024 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Limited
   ocg: Unlimited
