--- a/data/cards/20802187.yaml
+++ b/data/cards/20802187.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Uma vez por turno: Você pode escolher 1 Monstro Xyz que você controla; associe 1 monstro de LUZ de Nível 4 com a face para cima que você controla ao alvo como uma Matéria Xyz. Quando este card for enviado do campo ao Cemitério: Escolha 2 monstros de LUZ do Tipo Trovão de Nível 4 com o mesmo nome no seu Cemitério; adicione os alvos à sua mão.
   ja: |-
-    １ターンに１度、自分フィールド上のエクシーズモンスター１体を選択して発動できる。自分フィールド上の光属性・レベル４モンスター１体を、選択したエクシーズモンスターの下に重ねてエクシーズ素材とする。また、このカードがフィールド上から墓地へ送られた時、自分の墓地の雷族・光属性・レベル４の同名モンスター２体を選択して手札に加える。
+    ①：１ターンに１度、自分フィールドのＸモンスター１体を対象として発動できる。自分フィールドの光属性・レベル４モンスター１体を選び、対象のＸモンスターのＸ素材とする。②：このカードがフィールドから墓地へ送られた場合、自分の墓地の雷族・光属性・レベル４の同名モンスター２体を対象として発動する。その雷族・光属性モンスターを手札に加える。
   ko: |-
     1턴에 1번, 자신 필드 위의 엑시즈 몬스터 1장을 선택하고 발동할 수 있다. 자신 필드 위의 빛 속성 / 레벨 4 몬스터 1장을, 선택한 엑시즈 몬스터의 아래에 겹쳐 엑시즈 소재로 한다. 또한, 이 카드가 필드 위에서 묘지로 보내졌을 때, 자신 묘지의 번개족 / 빛 속성 / 레벨 4의 같은 이름의 몬스터 2장을 선택하고 패에 넣는다.
   zh-TW: |-
