--- a/data/cards/21200905.yaml
+++ b/data/cards/21200905.yaml
@@ -102,6 +102,10 @@ sets:
     set_name: Mega Pack 01
     rarities:
     - Super Rare
+  - set_number: 24SP-SC100
+    set_name: Entry Pack 2024 Vol.1
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
