--- a/data/cards/21452275.yaml
+++ b/data/cards/21452275.yaml
@@ -102,6 +102,11 @@ sets:
     set_name: Clash of Rebellions
     rarities:
     - Common
+  zh-CN:
+  - set_number: 24SP-SC111
+    set_name: Entry Pack 2024 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
