--- a/data/cards/21903613.yaml
+++ b/data/cards/21903613.yaml
@@ -93,6 +93,11 @@ sets:
     set_name: Dimension Force
     rarities:
     - Rare
+  zh-CN:
+  - set_number: 24SP-SC121
+    set_name: Entry Pack 2024 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
