--- a/data/cards/22653490.yaml
+++ b/data/cards/22653490.yaml
@@ -120,6 +120,11 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  zh-CN:
+  - set_number: 24SP-SC118
+    set_name: Entry Pack 2024 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
