--- a/data/cards/27753563.yaml
+++ b/data/cards/27753563.yaml
@@ -84,6 +84,11 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Normal Rare
+  zh-CN:
+  - set_number: 24SP-SC123
+    set_name: Entry Pack 2024 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
