--- a/data/cards/36021814.yaml
+++ b/data/cards/36021814.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     O ATK original deste card é igual ao número combinado de "Rei dos Servos Caveira" e "Servo Caveira" no seu Cemitério x 1000. Quando este card for destruído em batalha e enviado para o Cemitério: você pode banir 1 outro "Rei dos Servos Caveira" ou 1 "Servo Caveira" do seu Cemitério; Invoque este card por Invocação-Especial.
   ja: |-
-    このカードの元々の攻撃力は、自分の墓地に存在する「ワイトキング」 「ワイト」の数×１０００ポイントの数値になる。 このカードが戦闘によって破壊され墓地へ送られた時、 自分の墓地の「ワイトキング」または「ワイト」１体を ゲームから除外する事で、このカードを特殊召喚する。
+    ①：このカードの元々の攻撃力は、自分の墓地の「ワイトキング」「ワイト」の数×１０００になる。②：このカードが戦闘で破壊され墓地へ送られた時、自分の墓地から他の「ワイトキング」か「ワイト」１体を除外して発動できる。このカードを特殊召喚する。
   ko: |-
     이 카드의 원래 공격력은 자신의 묘지에 존재하는 "저주받은 하인 킹" "저주받은 하인"의 수 × 1000 포인트의 수치가 된다. 이 카드가 전투에 의해서 파괴되어 묘지로 보내졌을 때, 자신의 묘지의 "저주받은 하인 킹" 또는 "저주받은 하인" 1장을 게임에서 제외하는 것으로, 이 카드를 특수 소환한다.
   zh-TW: |-
@@ -212,6 +212,10 @@ sets:
     set_name: Expert Edition Volume 3
     rarities:
     - Common
+  - set_number: 24TP-JP102
+    set_name: Tournament Pack 2024 Vol.1
+    rarities:
+    - Super Rare
   ko:
   - set_number: TLM-KR032
     set_name: The Lost Millennium
