--- a/data/cards/43047672.yaml
+++ b/data/cards/43047672.yaml
@@ -94,6 +94,11 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  zh-CN:
+  - set_number: 24SP-SC101
+    set_name: Entry Pack 2024 Vol.1
+    rarities:
+    - Ultra Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
