--- a/data/cards/44968459.yaml
+++ b/data/cards/44968459.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Durante a Fase de Batalha, se você controlar um monstro "Mago Silencioso" e tiver mais cards na sua mão que seu oponente: cada duelista compra até ter 6 cards em sua mão. A ativação e efeito deste card não podem ser negados. Você pode banir este card do seu Cemitério; adicione 1 monstro "Mago Silencioso" do seu Deck à sua mão.
   ja: |-
-    ①：自分フィールドに「サイレント・マジシャン」モンスターが存在し、自分の手札が相手より多い場合、自分・相手のバトルフェイズに発動できる。お互いのプレイヤーは、それぞれ手札が６枚になるようにデッキからドローする。このカードの発動と効果は無効化されない。②：自分メインフェイズに墓地のこのカードを除外して発動できる。デッキから「サイレント・マジシャン」モンスター１体を手札に加える。
+    ①：自分フィールドに「サイレント・マジシャン」モンスターが存在し、自分の手札が相手より多い場合、自分・相手のバトルフェイズに発動できる（このカードの発動と効果は無効化されない）。お互いのプレイヤーは、それぞれ手札が６枚になるようにドローする。②：自分メインフェイズに墓地のこのカードを除外して発動できる。デッキから「サイレント・マジシャン」モンスター１体を手札に加える。
   ko: |-
     ①: 자신 필드에 "사일런트 매지션" 몬스터가 존재하고, 자신의 패가 상대보다 많을 경우, 자신 / 상대의 배틀 페이즈에 발동할 수 있다. 서로 패가 6장이 되도록 덱에서 드로우한다. 이 카드의 발동과 효과는 무효화되지 않는다. ②: 묘지의 이 카드를 제외하고 발동할 수 있다. 덱에서 "사일런트 매지션" 몬스터 1장을 패에 넣는다.
   zh-TW: |-
