--- a/data/cards/57473560.yaml
+++ b/data/cards/57473560.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Se este card for enviado para o Cemitério: você pode enviar 1 "Servo Caveira" e 1 "A Dama Inumana" da sua mão e/ou do Deck para o Cemitério. Você pode banir 2 "Servo Caveira" e este card do seu Cemitério; Invoque por Invocação-Especial 1 "Rei dos Servos Caveira" do seu Deck. O nome deste card se torna "Servo Caveira" enquanto estiver no Cemitério.
   ja: |-
-    ①：このカードのカード名は、墓地に存在する限り「ワイト」として扱う。②：このカードが墓地へ送られた場合に発動できる。「ワイト」「ワイト夫人」１体ずつを手札・デッキから墓地へ送る。③：自分の墓地から、「ワイト」２体とこのカードを除外して発動できる。デッキから「ワイトキング」１体を特殊召喚する。
+    ①：このカードのカード名は、墓地に存在する限り「ワイト」として扱う。②：このカードが墓地へ送られた場合に発動できる。「ワイト」「ワイト夫人」をそれぞれ１体ずつ手札・デッキから墓地へ送る。③：自分の墓地から他の「ワイト」２体とこのカードを除外して発動できる。デッキから「ワイトキング」１体を特殊召喚する。
   ko: |-
     ①: 이 카드의 카드명은, 묘지에 존재하는 한 "저주받은 하인"으로 취급한다. ②: 이 카드가 묘지로 보내졌을 경우에 발동할 수 있다. "저주받은 하인" "저주받은 하인 부인" 1장씩을 패 / 덱에서 묘지로 보낸다. ③: 자신의 묘지에서 "저주받은 하인" 2장과 이 카드를 제외하고 발동할 수 있다. 덱에서 "저주받은 하인 킹" 1장을 특수 소환한다.
   zh-TW: |-
