--- a/data/cards/67797569.yaml
+++ b/data/cards/67797569.yaml
@@ -96,6 +96,11 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  zh-CN:
+  - set_number: 24SP-SC117
+    set_name: Entry Pack 2024 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
