--- a/data/cards/73887236.yaml
+++ b/data/cards/73887236.yaml
@@ -145,6 +145,11 @@ sets:
     set_name: Dimension Box Limited Edition
     rarities:
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: 24SP-SC119
+    set_name: Entry Pack 2024 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
