--- a/data/cards/75376965.yaml
+++ b/data/cards/75376965.yaml
@@ -147,6 +147,11 @@ sets:
     set_name: Legend of Blue Eyes White Dragon
     rarities:
     - Common
+  zh-CN:
+  - set_number: 24SP-SC105
+    set_name: Entry Pack 2024 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
