--- a/data/cards/78658564.yaml
+++ b/data/cards/78658564.yaml
@@ -360,6 +360,11 @@ sets:
     set_name: 'Half-Deck: DARK'
     rarities:
     - Common
+  zh-CN:
+  - set_number: 24SP-SC106
+    set_name: Entry Pack 2024 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
