--- a/data/cards/80312545.yaml
+++ b/data/cards/80312545.yaml
@@ -105,6 +105,10 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts of Chaos'
     rarities:
     - Normal Parallel Rare
+  - set_number: 24SP-SC103
+    set_name: Entry Pack 2024 Vol.1
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
