--- a/data/cards/80516007.yaml
+++ b/data/cards/80516007.yaml
@@ -108,6 +108,11 @@ sets:
     set_name: Advanced Event Pack 2020 Vol.1
     rarities:
     - Common
+  zh-CN:
+  - set_number: 24SP-SC114
+    set_name: Entry Pack 2024 Vol.1
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
