--- a/data/cards/87188910.yaml
+++ b/data/cards/87188910.yaml
@@ -46,7 +46,7 @@ text:
     ● (Efeito Rápido): você pode descartar 2 cards e, depois, escolha 1 card no campo; destrua-o.
   ja: |-
     チューナー＋チューナー以外のモンスター１体以上
-    このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがＳ召喚に成功した場合に発動できる。そのＳ素材としたモンスターの内、チューナー以外のモンスターの数だけ、自分はデッキからドローする。②：このカードの攻撃力・守備力は自分の手札の数×５００アップする。③：手札を２枚捨て、フィールドのカード１枚を対象として発動できる。そのカードを破壊する。この効果は相手ターンでも発動できる。
+    このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがＳ召喚した場合に発動できる。そのＳ素材としたモンスターの内、チューナー以外のモンスターの数だけ、自分はドローする。②：このカードの攻撃力・守備力は、自分の手札の数×５００アップする。③：自分・相手ターンに、手札を２枚捨て、フィールドのカード１枚を対象として発動できる。そのカードを破壊する。
   ko: |-
     튜너 ＋ 튜너 이외의 몬스터 1장 이상
     이 카드명의 ①③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 싱크로 소환에 성공했을 경우에 발동할 수 있다. 그 싱크로 소재로 한 몬스터 중, 튜너 이외의 몬스터의 수만큼, 자신은 덱에서 드로우한다. ②: 이 카드의 공격력 / 수비력은 자신의 패의 수 × 500 올린다. ③: 패를 2장 버리고, 필드의 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 파괴한다. 이 효과는 상대 턴에도 발동할 수 있다.
@@ -54,7 +54,7 @@ text:
     協調＋協調以外的怪獸１隻以上
     此卡名的①③效果，１回合各僅限使用１次。①：可在此卡同步召喚成功的狀況下發動。我方從牌組抽牌，數量為做為該同步素材的怪獸中，協調以外的怪獸數量。②：此卡的攻擊力・守備力依據我方的手牌數量×５００進行提升。③：可捨棄２張手牌，將場上的１張卡做為對象發動。破壞該卡。此效果在對方回合也可發動。
   zh-CN: |-
-    协调＋1只以上协调以外的怪兽
+    协调+1只以上协调以外的怪兽
     此卡名的①③效果1回合仅可各使用1次。①：此卡同步召唤成功的情况下可以发动。自己从牌组抽牌，数量为该同步素材的怪兽中协调以外的怪兽数量。②：此卡的攻击力・守备力上升相当于自己手牌数量×500的数值。③：舍弃2张手牌，以场上的1张卡为对象可以发动。将该卡破坏。此效果在对手回合中也可以发动。
 card_type: Monster
 monster_type_line: Fish / Synchro / Effect
@@ -117,6 +117,10 @@ sets:
     set_name: Eternity Code
     rarities:
     - Common
+  - set_number: 24TP-JP101
+    set_name: Tournament Pack 2024 Vol.1
+    rarities:
+    - Super Rare
   ko:
   - set_number: ETCO-KR043
     set_name: Eternity Code
