--- a/data/cards/95735217.yaml
+++ b/data/cards/95735217.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Não pode ser Invocado por Invocação-Especial. Se este card atacar um monstro em Posição de Defesa, cause dano de batalha perfurante. Até duas vezes por turno, quando este card atacante destruir um monstro em batalha: você pode descartar 1 monstro Máquina; este card pode atacar novamente em seguida. Se este card no campo for destruído em batalha ou por um efeito de card: você pode adicionar 1 "Polimerização" do seu Deck à sua mão e, se isso acontecer, adicione 1 outro monstro "Mecanismo Antigo" do seu Cemitério à sua mão.
   ja: |-
-    このカードは特殊召喚できない。①：このカードが守備表示モンスターを攻撃した場合、その守備力を攻撃力が超えた分だけ戦闘ダメージを与える。②：このカードの攻撃でモンスターを破壊した時、手札から機械族モンスター１体を捨てて発動できる。このカードは続けて攻撃できる。この効果は１ターンに２度まで使用できる。③：フィールドのこのカードが戦闘・効果で破壊された場合に発動できる。デッキから「融合」１枚を手札に加え、自分の墓地からこのカード以外の「アンティーク・ギア」モンスター１体を選んで手札に加える。
+    このカードは特殊召喚できない。①：このカードが守備表示モンスターを攻撃した場合、その守備力を攻撃力が超えた分だけ相手に戦闘ダメージを与える。②：１ターンに２度まで、このカードの攻撃でモンスターを破壊した時、手札から機械族モンスター１体を捨てて発動できる。このカードは続けて攻撃できる。③：フィールドのこのカードが戦闘・効果で破壊された場合に発動できる。デッキから「融合」１枚を手札に加え、自分の墓地から他の「アンティーク・ギア」モンスター１体を手札に加える。
   ko: |-
     이 카드는 특수 소환할 수 없다. ①: 이 카드가 수비 표시 몬스터를 공격했을 경우, 그 수비력을 공격력이 넘은 만큼만 전투 데미지를 준다. ②: 이 카드의 공격으로 몬스터를 파괴했을 때, 패에서 기계족 몬스터 1장을 버리고 발동할 수 있다. 이 카드는 이어서 공격할 수 있다. 이 효과는 1턴에 2번까지 사용할 수 있다. ③: 필드의 이 카드가 전투 / 효과로 파괴되었을 경우에 발동할 수 있다. 덱에서 "융합" 1장을 패에 넣고, 자신 묘지에서 이 카드 이외의 "앤틱 기어" 몬스터 1장을 골라 패에 넣는다.
   zh-TW: |-
