--- a/data/rush/17328.yaml
+++ b/data/rush/17328.yaml
@@ -35,7 +35,7 @@ effect:
   it:
   pt:
   ja: |-
-    自分のデッキの上からカード５枚を墓地へ送る。その中にモンスター（爬虫類族）がいた場合、さらに自分フィールドの表側表示モンスター（爬虫類族）１体を選んでその攻撃力をターン終了時まで［この効果で墓地へ送ったモンスター（爬虫類族）の数］×２００アップできる。
+    自分のデッキの上からカード５枚を墓地へ送る。その中にモンスター（爬虫類族）がいた場合、さらに自分フィールドの表側表示モンスター（爬虫類族）１体を選んでその攻撃力をターン終了時まで［この効果で墓地へ送られたモンスター（爬虫類族）の数］×２００アップできる。
   ko: |-
     자신의 덱 위에서 카드 5장을 묘지로 보낸다. 그 중에 몬스터(파충류족)가 있었을 경우, 추가로 자신 필드의 앞면 표시 몬스터(파충류족) 1장을 고르고 그 공격력을 턴 종료시까지 [이 효과로 묘지로 보낸 몬스터(파충류족)의 수] × 200 올릴 수 있다.
   zh-TW:
