--- a/data/cards/63845230.yaml
+++ b/data/cards/63845230.yaml
@@ -146,7 +146,7 @@ sets:
   - set_number: 20TP-JP306
     set_name: Tournament Pack 2020 Vol.3
     rarities:
-    - C
+    - Common
   ko:
   - set_number: RATE-KR032
     set_name: Raging Tempest
