--- a/data/cards/13722870.yaml
+++ b/data/cards/13722870.yaml
@@ -51,6 +51,8 @@ level: 6
 atk: 2200
 def: 800
 materials: '"Dark Magician" + "Flame Swordsman"'
+series:
+- Flame Swordsman
 images:
 - index: 1
   image: DarkFlareKnight-DCR-EN-SR-UE-25thAnniversaryEdition.png
