--- a/data/cards/78661338.yaml
+++ b/data/cards/78661338.yaml
@@ -46,6 +46,7 @@ images:
   illustration: FantasticalDragonPhantazmay-MADU-EN-VG-artwork.png
 - index: 2
   image: FantasticalDragonPhantazmay-MAGO-EN-PGR-1E.png
+  illustration: FantasticalDragonPhantazmay-CA-2.png
 sets:
   en:
   - set_number: SAST-EN020
