--- a/data/cards/yugipedia1037024.yaml
+++ b/data/cards/yugipedia1037024.yaml
@@ -32,6 +32,7 @@ attribute: FIRE
 level: 5
 atk: 1700
 def: 1600
+materials: 1 Dragon-Type monster + 1 FIRE Warrior-Type monster
 series:
 - Flame Swordsman
 images:
