--- a/data/cards/03285551.yaml
+++ b/data/cards/03285551.yaml
@@ -38,7 +38,7 @@ text:
 card_type: Spell
 property: Normal
 series:
-- Adventurer Token
+- Adventurer
 images:
 - index: 1
   image: RiteofAramesir-MP23-EN-PScR-1E.png
