--- a/data/cards/27623932.yaml
+++ b/data/cards/27623932.yaml
@@ -37,7 +37,7 @@ text:
 card_type: Trap
 property: Normal
 series:
-- Adventurer Token
+- Adventurer
 images:
 - index: 1
   image: ThunderDischarge-MP23-EN-C-1E.png
