--- a/data/cards/30680659.yaml
+++ b/data/cards/30680659.yaml
@@ -44,7 +44,7 @@ level: 3
 atk: 1500
 def: 1200
 series:
-- Adventurer Token
+- Adventurer
 images:
 - index: 1
   image: WaterEnchantressoftheTemple-MP23-EN-PScR-1E.png
