--- a/data/cards/39568067.yaml
+++ b/data/cards/39568067.yaml
@@ -37,7 +37,7 @@ text:
 card_type: Spell
 property: Continuous
 series:
-- Adventurer Token
+- Adventurer
 images:
 - index: 1
   image: FatefulAdventure-MP23-EN-PScR-1E.png
