--- a/data/cards/42198835.yaml
+++ b/data/cards/42198835.yaml
@@ -41,7 +41,7 @@ level: 7
 atk: 2000
 def: 2000
 series:
-- Adventurer Token
+- Adventurer
 images:
 - index: 1
   image: IllegalKnight-MP23-EN-UR-1E.png
