--- a/data/cards/66078354.yaml
+++ b/data/cards/66078354.yaml
@@ -41,7 +41,7 @@ level: 4
 atk: 2300
 def: 1000
 series:
-- Adventurer Token
+- Adventurer
 images:
 - index: 1
   image: MagicoreWarrioroftheRelics-MP23-EN-UR-1E.png
