--- a/data/cards/02563463.yaml
+++ b/data/cards/02563463.yaml
@@ -41,7 +41,7 @@ level: 7
 atk: 2000
 def: 2800
 series:
-- Adventurer Token
+- Adventurer
 images:
 - index: 1
   image: WanderingGryphonRider-MP23-EN-UR-1E.png
