--- a/data/cards/54092240.yaml
+++ b/data/cards/54092240.yaml
@@ -41,7 +41,7 @@ level: 4
 atk: 1000
 def: 1000
 series:
-- Adventurer Token
+- Adventurer
 images:
 - index: 1
   image: CelestialApparatusTesea-BLMR-EN-UR-1E.png
