--- a/data/cards/92341815.yaml
+++ b/data/cards/92341815.yaml
@@ -37,7 +37,7 @@ text:
 card_type: Spell
 property: Equip
 series:
-- Adventurer Token
+- Adventurer
 images:
 - index: 1
   image: StarlitPapillon-MP23-EN-C-1E.png
