--- a/data/cards/17217034.yaml
+++ b/data/cards/17217034.yaml
@@ -1,5 +1,5 @@
 konami_id: 19933
-password:
+password: 17217034
 name:
   en: Combination Maneuver - Engage Zero
   de:
@@ -43,7 +43,7 @@ series:
 - Signature move
 images:
 - index: 1
-  image: CombinationManeuverEngageZero-YOS1-JP-OP.png
+  image: CombinationManeuverEngageZero-YOS1-JP-UR.png
 sets:
   ja:
   - set_number: YOS1-JP003
@@ -59,4 +59,3 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1029156
-fake_password: 100296003
