--- a/data/cards/yugipedia1035520.yaml
+++ b/data/cards/yugipedia1035520.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    TBA
+    Target 1 monster in either GY; Special Summon it to your field, but it cannot attack or activate its effects this turn. You can only activate 1 "Spell Card: "Monster Reborn"" per turn.
   de:
   es:
   fr:
