--- a/data/cards/62337487.yaml
+++ b/data/cards/62337487.yaml
@@ -41,6 +41,8 @@ level: 7
 atk: 2350
 def: 2150
 ritual_spell: Fortress Whale's Oath
+series:
+- Fortress Whale
 images:
 - index: 1
   image: FortressWhale-DC-JP-SR.png
