--- a/data/cards/77454922.yaml
+++ b/data/cards/77454922.yaml
@@ -36,6 +36,8 @@ text:
     「要塞鲸」的降临必需。必须从场上或手卡把星数直到合计7个以上的卡作为祭品。
 card_type: Spell
 property: Ritual
+series:
+- Fortress Whale
 images:
 - index: 1
   image: FortressWhalesOath-SBC1-EN-C-1E.png
