--- a/data/cards/91512835.yaml
+++ b/data/cards/91512835.yaml
@@ -40,6 +40,8 @@ attribute: EARTH
 level: 7
 atk: 2200
 def: 2400
+series:
+- Insect Queen
 images:
 - index: 1
   image: InsectQueen-SBC1-EN-C-1E.png
