--- a/data/cards/96546575.yaml
+++ b/data/cards/96546575.yaml
@@ -43,6 +43,8 @@ attribute: WATER
 level: 7
 atk: 2550
 def: 2350
+series:
+- Fortress Whale
 images:
 - index: 1
   image: MegaFortressWhale-LED9-EN-UR-1E.png
