--- a/data/cards/yugipedia1037582.yaml
+++ b/data/cards/yugipedia1037582.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 蕾禍ノ矢筈天牛
-  ja_romaji:
+  ja: <ruby>蕾禍<rt>ライカ</rt></ruby>ノ<ruby>矢筈天牛<rt>ヤハズカミキリ</rt></ruby>
+  ja_romaji: Raika no Yahazu Kamikiri
   ko:
   ko_rr:
   zh-TW:
