--- a/data/cards/yugipedia1037593.yaml
+++ b/data/cards/yugipedia1037593.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 蕾禍ノ鎖蛇巳
-  ja_romaji:
+  ja: <ruby>蕾禍<rt>ライカ</rt></ruby>ノ<ruby>鎖蛇巳<rt>クサリガミ</rt></ruby>
+  ja_romaji: Raika no Kusarigami
   ko:
   ko_rr:
   zh-TW:
