--- a/data/cards/yugipedia1037602.yaml
+++ b/data/cards/yugipedia1037602.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 蕾禍繚乱狂咲
-  ja_romaji:
+  ja: <ruby>蕾禍<rt>ライカ</rt></ruby><ruby>繚<rt>リョウ</rt></ruby><ruby>乱<rt>ラン</rt></ruby><ruby>狂<rt>クルイ</rt></ruby><ruby>咲<rt>サキ</rt></ruby>
+  ja_romaji: Raika Ryouran Kuruisaki
   ko:
   ko_rr:
   zh-TW:
