--- a/data/cards/yugipedia1037584.yaml
+++ b/data/cards/yugipedia1037584.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 蕾禍ノ鎧石竜
-  ja_romaji:
+  ja: <ruby>蕾禍<rt>ライカ</rt></ruby>ノ<ruby>鎧石竜<rt>ヨロイトカゲ</rt></ruby>
+  ja_romaji: Raika no Yoroi Tokage
   ko:
   ko_rr:
   zh-TW:
