--- a/data/cards/yugipedia1037591.yaml
+++ b/data/cards/yugipedia1037591.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 蕾禍ノ御拝神主
-  ja_romaji:
+  ja: <ruby>蕾禍<rt>ライカ</rt></ruby>ノ<ruby>御拝神主<rt>オオガミヌシ</rt></ruby>
+  ja_romaji: Raika no Oogaminushi
   ko:
   ko_rr:
   zh-TW:
