--- a/data/cards/yugipedia1037603.yaml
+++ b/data/cards/yugipedia1037603.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 蕾禍大輪首狩舞
-  ja_romaji:
+  ja: <ruby>蕾禍<rt>ライカ</rt></ruby><ruby>大<rt>ダイ</rt></ruby><ruby>輪<rt>リン</rt></ruby><ruby>首<rt>クビ</rt></ruby><ruby>狩<rt>カリ</rt></ruby><ruby>舞<rt>マイ</rt></ruby>
+  ja_romaji: Raika Dairin Kubikarimai
   ko:
   ko_rr:
   zh-TW:
