--- a/data/cards/08690387.yaml
+++ b/data/cards/08690387.yaml
@@ -17,9 +17,8 @@ text:
   en: |-
     1 DARK Tuner + 1+ non-Tuner monsters
     During the Main Phase (Quick Effect): You can target 1 face-up monster your opponent controls; your opponent chooses 1 of these effects for you to apply.
-    ● Destroy that monster.
-    ● Gain LP equal to that monster's ATK.
-    During the Battle Phase (Quick Effect): You can Fusion Summon 1 "Earthbound" Fusion Monster from your Extra Deck, by banishing Fusion Materials mentioned on it from your hand, field, and/or GY. You can only use each effect of "Earthbound Servant Geo Gremlin" once per turn.
+    ● Destroy that monster. ● Gain LP equal to that monster's ATK.
+    During the Battle Phase (Quick Effect): You can Fusion Summon 1 "Earthbound" Fusion Monster from your Extra Deck, by banishing its materials from your hand, field, and/or GY. You can only use each effect of "Earthbound Servant Geo Gremlin" once per turn.
   de:
   es:
   fr:
@@ -53,6 +52,31 @@ images:
 - index: 1
   image: EarthboundServantGeoGremlin-AC03-JP-NPR.png
 sets:
+  en:
+  - set_number: MZMI-EN032
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
+  de:
+  - set_number: MZMI-DE032
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
+  fr:
+  - set_number: MZMI-FR032
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
+  it:
+  - set_number: MZMI-IT032
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
+  pt:
+  - set_number: MZMI-PT032
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: AC03-JP022
     set_name: Animation Chronicle 2023
@@ -71,7 +95,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 934430
