--- a/data/cards/10666000.yaml
+++ b/data/cards/10666000.yaml
@@ -1,7 +1,7 @@
 konami_id: 19034
 password: 10666000
 name:
-  en: 'Number 1: Infection Buzz King'
+  en: 'Number 1: Infection Buzzking'
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2+ Level 8 monsters
-    Once per turn, during your Standby Phase: You can attach 1 card from your opponent's GY to this card as material. You can only use each of the following effects of "Number 1: Infection Buzz King" once per turn. If this card is Xyz Summoned: You can look at your opponent's Extra Deck and send 1 card from it to the GY. You can detach 1 material from this card, then target 1 card your opponent controls; destroy it, then, if you destroyed a face-up monster, inflict damage to your opponent equal to half the ATK that monster had on the field.
+    Once per turn, during your Standby Phase: You can attach 1 card from your opponent's GY to this card as material. You can only use each of the following effects of "Number 1: Infection Buzzking" once per turn. If this card is Xyz Summoned: You can look at your opponent's Extra Deck and send 1 card from it to the GY. You can detach 1 material from this card, then target 1 card your opponent controls; destroy it, then, if you destroyed a face-up monster, inflict damage to your opponent equal to half the ATK that monster had on the field.
   de:
   es:
   fr:
@@ -43,7 +43,7 @@ series:
 - Barian Number
 images:
 - index: 1
-  image: Number1InfectionBuzzKing-AC03-JP-SR.png
+  image: Number1InfectionBuzzking-AC03-JP-SR.png
 sets:
   en:
   - set_number: MZMI-EN0??
