--- a/data/cards/07473735.yaml
+++ b/data/cards/07473735.yaml
@@ -15,7 +15,10 @@ name:
   zh-CN: 异界共鸣－同步结合
 text:
   en: |-
-    Send 2 face-up monsters you control to the GY (1 Tuner and 1 non-Tuner); Special Summon 1 Fusion Monster and 1 Synchro Monster from your Extra Deck that can be Fusion and Synchro Summoned using only those 2 monsters in the GY as material. You cannot Special Summon monsters from the Extra Deck the turn you activate this card, except Fusion and Synchro Monsters. You can only activate 1 "Harmonic Synchro Fusion" per turn.
+    Send 1 Tuner and 1 non-Tuner from your face-up field to the GY; Special Summon both of the following monsters from your Extra Deck.
+    ● 1 Synchro Monster that could be Synchro Summoned using just those 2 monsters in the GY as material.
+    ● 1 Fusion Monster that could be Fusion Summoned using just those 2 monsters in the GY as material.
+    You cannot Special Summon from the Extra Deck the turn you activate this card, except Fusion or Synchro Monsters. You can only activate 1 "Harmonic Synchro Fusion" per turn.
   de:
   es:
   fr:
@@ -45,25 +48,30 @@ images:
   image: HarmonicSynchroFusion-AC03-JP-UR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN035
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE035
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR035
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT035
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT035
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   ja:
   - set_number: AC03-JP025
     set_name: Animation Chronicle 2023
@@ -90,7 +98,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 934438
