--- a/data/cards/11489642.yaml
+++ b/data/cards/11489642.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 三角阵-O
 text:
   en: |-
-    If you control "Crystal Skull", "Ashoka Pillar", and "Cabrera Stone": Destroy all cards on the field, also, this turn, your opponent takes any effect damage you would have taken instead. You can banish this card from your GY, then target 1 "Crystal Skull", 1 "Ashoka Pillar", and 1 "Cabrera Stone" in your GY; shuffle them into the Deck, then draw 3 cards. You can only use 1 "Triangle O" effect per turn, and only once that turn.
+    If you control "Crystal Skull", "Ashoka Pillar", and "Cabrera Stone": Destroy all cards on the field, also for the rest of this turn, your opponent takes any effect damage you would have taken instead. You can banish this card from your GY, then target 1 each of "Crystal Skull", "Ashoka Pillar", and "Cabrera Stone" in your GY; shuffle them into the Deck, then draw 3 cards. You can only use 1 "Triangle O" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -37,25 +37,30 @@ images:
   image: TriangleO-AC03-JP-NPR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN020
     set_name: Maze of Millennia
     rarities:
+    - Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE020
     set_name: Maze of Millennia
     rarities:
+    - Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR020
     set_name: Maze of Millennia
     rarities:
+    - Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT020
     set_name: Maze of Millennia
     rarities:
+    - Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT020
     set_name: Maze of Millennia
     rarities:
+    - Rare
   ja:
   - set_number: AC03-JP010
     set_name: Animation Chronicle 2023
@@ -71,7 +76,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 928735
