--- a/data/cards/12501230.yaml
+++ b/data/cards/12501230.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
-    The first time this card would be destroyed by an opponent's card effect each turn, it is not destroyed. Once per opponent's Battle Phase (Quick Effect): You can discard 1 card; this card gains ATK equal to half the total ATK of all other face-up monsters you currently control, then place 1 counter on this card, also your opponent's monsters cannot target monsters for attacks this turn, except this one. If this card with a counter is destroyed by battle: Destroy all monsters you control.
+    The first time this card would be destroyed by an opponent's card effect each turn, it is not destroyed. Once per turn, during your opponent's Battle Phase (Quick Effect): You can discard 1 card; this card gains ATK equal to half the total ATK of all other monsters you currently control, then place 1 counter on this card, also for the rest of this turn, your opponent's monsters cannot target monsters for attacks, except this one. If this card with a counter is destroyed by battle: Destroy all monsters you control.
   de:
   es:
   fr:
@@ -44,25 +44,30 @@ images:
   image: CombatWheel-AC03-JP-SR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN017
     set_name: Maze of Millennia
     rarities:
+    - Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE017
     set_name: Maze of Millennia
     rarities:
+    - Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR017
     set_name: Maze of Millennia
     rarities:
+    - Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT017
     set_name: Maze of Millennia
     rarities:
+    - Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT017
     set_name: Maze of Millennia
     rarities:
+    - Rare
   ja:
   - set_number: AC03-JP007
     set_name: Animation Chronicle 2023
@@ -76,7 +81,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 928726
