--- a/data/cards/19322865.yaml
+++ b/data/cards/19322865.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 地缚囚人 地线巡视者
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can add 1 "Earthbound Prison" or "Harmonic Synchro Fusion" from your Deck or GY to your hand. If you control a Level 6 or higher "Earthbound" monster: You can banish this card from your GY, then target 1 opponent's Effect Monster Special Summoned from the Extra Deck; shuffle that Effect Monster into the Deck, then your opponent can Special Summon 1 monster with the same name from their Extra Deck. You can only use each effect of "Earthbound Prisoner Line Walker" once per turn.
+    If this card is Normal or Special Summoned: You can add 1 "Earthbound Prison" or "Harmonic Synchro Fusion" from your Deck or GY to your hand. If you control a Level 6 or higher "Earthbound" monster: You can banish this card from your GY, then target 1 Effect Monster your opponent controls that was Special Summoned from the Extra Deck; shuffle that face-up Effect Monster into the Deck, then your opponent can Special Summon 1 monster with the same name from their Extra Deck. You can only use each effect of "Earthbound Prisoner Line Walker" once per turn.
   de:
   es:
   fr:
@@ -44,25 +44,30 @@ images:
   image: EarthboundPrisonerLineWalker-AC03-JP-NPR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN029
     set_name: Maze of Millennia
     rarities:
+    - Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE029
     set_name: Maze of Millennia
     rarities:
+    - Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR029
     set_name: Maze of Millennia
     rarities:
+    - Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT029
     set_name: Maze of Millennia
     rarities:
+    - Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT029
     set_name: Maze of Millennia
     rarities:
+    - Rare
   ja:
   - set_number: AC03-JP019
     set_name: Animation Chronicle 2023
@@ -81,7 +86,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 934412
