--- a/data/cards/19544412.yaml
+++ b/data/cards/19544412.yaml
@@ -37,6 +37,31 @@ images:
 - index: 1
   image: RingAnnouncer-AC03-JP-NPR.png
 sets:
+  en:
+  - set_number: MZMI-EN026
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
+  de:
+  - set_number: MZMI-DE026
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
+  fr:
+  - set_number: MZMI-FR026
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
+  it:
+  - set_number: MZMI-IT026
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
+  pt:
+  - set_number: MZMI-PT026
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: AC03-JP016
     set_name: Animation Chronicle 2023
@@ -50,7 +75,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 975425
