--- a/data/cards/32268901.yaml
+++ b/data/cards/32268901.yaml
@@ -36,6 +36,8 @@ text:
     炎属性怪兽才能装备。①：装备怪兽的攻击力上升700。
 card_type: Spell
 property: Equip
+series:
+- Salamandra
 images:
 - index: 1
   image: Salamandra-SGX1-EN-C-1E.png
