--- a/data/cards/33750856.yaml
+++ b/data/cards/33750856.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 代码入侵
 text:
   en: |-
-    Cyberse Link Monsters you control cannot be destroyed by your opponent's card effects. Once per turn, during the Battle Step, if your monster battles an opponent's monster: You can change that opponent's monster's ATK to 0 (until the end of this turn), and if you do, neither monster can be destroyed by that battle, also neither player takes battle damage from that battle. When your opponent activates a card or effect during the Damage Step while your "Code Talker" monster is attacking: You can banish this card from your GY; negate the activation, and if you do, the attacking monster gains 700 ATK.
+    Cyberse Link Monsters you control cannot be destroyed by your opponent's card effects. Once per turn, during the Battle Step, if your monster battles an opponent's monster: You can activate this effect; that opponent's monster's ATK becomes 0 until the end of this turn, also for that battle, monsters cannot be destroyed by battle and neither player takes battle damage. That opponent's monster must be face-up on the field to activate and to resolve this effect. When your opponent activates a card or effect during a Damage Step that your "Code Talker" monster is attacking in: You can banish this card from your GY; negate the activation, and if you do, your attacking monster gains 700 ATK.
   de:
   es:
   fr:
@@ -35,25 +35,30 @@ images:
   image: CodeHack-AC03-JP-NPR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN039
     set_name: Maze of Millennia
     rarities:
+    - Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE039
     set_name: Maze of Millennia
     rarities:
+    - Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR039
     set_name: Maze of Millennia
     rarities:
+    - Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT039
     set_name: Maze of Millennia
     rarities:
+    - Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT039
     set_name: Maze of Millennia
     rarities:
+    - Rare
   ja:
   - set_number: AC03-JP029
     set_name: Animation Chronicle 2023
@@ -67,7 +72,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 928733
