--- a/data/cards/44094981.yaml
+++ b/data/cards/44094981.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 DARK Tuner + 1+ non-Tuner monsters
-    (Quick Effect): You can Special Summon 1 "Earthbound" monster from your GY in Defense Position, except "Earthbound Servant Geo Gryphon", also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Fusion and Synchro Monsters. If this card in its owner's possession is destroyed by an opponent's card: You can destroy 1 card on the field, then inflict 300 damage to your opponent for each "Earthbound" monster with different names you control and in your GY. You can only use each effect of "Earthbound Servant Geo Gryphon" once per turn.
+    (Quick Effect): You can Special Summon 1 "Earthbound" monster from your GY in Defense Position, except "Earthbound Servant Geo Gryphon", also you cannot Special Summon from the Extra Deck for the rest of this turn, except Fusion or Synchro Monsters. If this card in its owner's possession is destroyed by an opponent's card: You can destroy 1 card on the field, then inflict 300 damage to your opponent for each "Earthbound" monster with a different name in your field and GY. You can only use each effect of "Earthbound Servant Geo Gryphon" once per turn.
   de:
   es:
   fr:
@@ -49,25 +49,30 @@ images:
   image: EarthboundServantGeoGryphon-AC03-JP-NPR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN033
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE033
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR033
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT033
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT033
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   ja:
   - set_number: AC03-JP023
     set_name: Animation Chronicle 2023
@@ -88,7 +93,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 934432
