--- a/data/cards/45716579.yaml
+++ b/data/cards/45716579.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 "Earthbound" monsters
-    If this card is Special Summoned: You can add 1 Field Spell from your Deck or GY to your hand. If a monster(s) is Special Summoned from your opponent's Extra Deck (except during the Damage Step): You can destroy as many monsters your opponent controls as possible that were Special Summoned this turn, and if you do, inflict 800 damage to your opponent for each monster destroyed by this effect. You can only use each effect of "Earthbound Servant Geo Kraken" once per turn.
+    If this card is Special Summoned: You can add 1 Field Spell from your Deck or GY to your hand. If a monster(s) is Special Summoned from your opponent's Extra Deck (except during the Damage Step): You can destroy as many monsters your opponent controls as possible that were Special Summoned this turn, and if you do, inflict 800 damage to your opponent for each monster destroyed. You can only use each effect of "Earthbound Servant Geo Kraken" once per turn.
   de:
   es:
   fr:
@@ -49,25 +49,30 @@ images:
   image: EarthboundServantGeoKraken-AC03-JP-SR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN030
     set_name: Maze of Millennia
     rarities:
+    - Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE030
     set_name: Maze of Millennia
     rarities:
+    - Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR030
     set_name: Maze of Millennia
     rarities:
+    - Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT030
     set_name: Maze of Millennia
     rarities:
+    - Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT030
     set_name: Maze of Millennia
     rarities:
+    - Rare
   ja:
   - set_number: AC03-JP020
     set_name: Animation Chronicle 2023
@@ -86,7 +91,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 934415
