--- a/data/cards/46939151.yaml
+++ b/data/cards/46939151.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 地缚囚人 大地看守者
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can Special Summon 1 Level 5 or lower "Earthbound" monster from your Deck or GY, except "Earthbound Prisoner Ground Keeper", also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Fusion and Synchro Monsters. You can only use this effect of "Earthbound Prisoner Ground Keeper" once per turn. "Earthbound" monsters you control cannot be destroyed by battle or card effects while a card is in a Field Zone.
+    If this card is Normal or Special Summoned: You can Special Summon 1 Level 5 or lower "Earthbound" monster from your Deck or GY, except "Earthbound Prisoner Ground Keeper", also you cannot Special Summon from the Extra Deck for the rest of this turn, except Fusion or Synchro Monsters. You can only use this effect of "Earthbound Prisoner Ground Keeper" once per turn. "Earthbound" monsters you control cannot be destroyed by battle or card effects while there is a card in a Field Zone.
   de:
   es:
   fr:
@@ -42,6 +42,31 @@ images:
 - index: 1
   image: EarthboundPrisonerGroundKeeper-AC03-JP-NPR.png
 sets:
+  en:
+  - set_number: MZMI-EN027
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
+  de:
+  - set_number: MZMI-DE027
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
+  fr:
+  - set_number: MZMI-FR027
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
+  it:
+  - set_number: MZMI-IT027
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
+  pt:
+  - set_number: MZMI-PT027
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: AC03-JP017
     set_name: Animation Chronicle 2023
@@ -60,7 +85,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 934400
