--- a/data/cards/47873397.yaml
+++ b/data/cards/47873397.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 图腾柱
 text:
   en: |-
-    Your opponent cannot target Rock monsters you control with 0 original ATK with card effects. Once per attack, when an opponent's monster declares an attack: You can negate that attack, and if you do, place 1 counter on this card. If this card has 3 counters, send it to the GY. If you have 3 or more Rock monsters with 0 ATK and different names in your GY: You can banish this card from your GY; any effect damage your opponent takes this turn is doubled.
+    Your opponent cannot target Rock monsters you control with 0 original ATK, with card effects. Once per battle, when an opponent's monster declares an attack: You can negate that attack, and if you do, place 1 counter on this card. If this card has 3 counters, send it to the GY. If you have 3 or more Rock monsters in your GY with 0 ATK and different names: You can banish this card from your GY; any effect damage your opponent takes this turn is doubled.
   de:
   es:
   fr:
@@ -35,25 +35,30 @@ images:
   image: TotemPole-AC03-JP-NPR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN021
     set_name: Maze of Millennia
     rarities:
+    - Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE021
     set_name: Maze of Millennia
     rarities:
+    - Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR021
     set_name: Maze of Millennia
     rarities:
+    - Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT021
     set_name: Maze of Millennia
     rarities:
+    - Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT021
     set_name: Maze of Millennia
     rarities:
+    - Rare
   ja:
   - set_number: AC03-JP011
     set_name: Animation Chronicle 2023
@@ -67,7 +72,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 928737
