--- a/data/cards/50834074.yaml
+++ b/data/cards/50834074.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 地狱猛禽翼龙
 text:
   en: |-
-    If your opponent controls 2 or more face-up non-WIND monsters, those monsters cannot target this card for attacks. You can only use each of the following effects of "Kaitoptera" once per turn. During your Main Phase: You can add 1 "Polymerization" from your Deck to your hand. If this card is banished: You can Special Summon it, then you can add 1 "Polymerization" from your GY to your hand.
+    If your opponent controls 2 or more face-up monsters, except WIND monsters, those monsters cannot target this card for attacks. You can only use each of the following effects of "Kaitoptera" once per turn. During your Main Phase: You can add 1 "Polymerization" from your Deck to your hand. If this card is banished: You can Special Summon it, then you can add 1 "Polymerization" from your GY to your hand.
   de:
   es:
   fr:
@@ -39,25 +39,30 @@ images:
   image: Kaitoptera-AC03-JP-NPR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN012
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE012
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR012
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT012
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT012
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   ja:
   - set_number: AC03-JP002
     set_name: Animation Chronicle 2023
@@ -73,7 +78,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 928720
