--- a/data/cards/58996839.yaml
+++ b/data/cards/58996839.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 阿育王柱
 text:
   en: |-
-    If this card is Summoned: You can add 1 Equip Spell from your Deck to your hand, then, if this card is in Attack Position, change it to Defense Position. You can only use this effect of "Ashoka Pillar" once per turn. If this card is destroyed by battle or card effect: Take 2000 damage.
+    If this card is Summoned: You can add 1 Equip Spell from your Deck to your hand, then if this card is in Attack Position, change it to Defense Position. You can only use this effect of "Ashoka Pillar" once per turn. If this card is destroyed by battle or card effect: Take 2000 damage.
   de:
   es:
   fr:
@@ -41,25 +41,30 @@ images:
   image: AshokaPillar-AC03-JP-NPR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN018
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE018
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR018
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT018
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT018
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   ja:
   - set_number: AC03-JP008
     set_name: Animation Chronicle 2023
@@ -75,7 +80,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 928728
