--- a/data/cards/59712426.yaml
+++ b/data/cards/59712426.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 秘仪之力15-魔鬼
 text:
   en: |-
-    You can discard this card; add 1 "Light Barrier" from your Deck or GY to your hand. If this card is Summoned: Toss a coin and gain the appropriate effect.
+    You can discard this card; add 1 "Light Barrier" from your Deck or GY to your hand. If this card is Summoned: Toss a coin and this card gains the appropriate effect.
     ● Heads: When an attack is declared involving this card: You can target 1 monster on the field; destroy it, and if you do, inflict 500 damage to its controller.
     ● Tails: When an attack is declared involving this card: Destroy all monsters on the field.
   de:
@@ -44,25 +44,30 @@ images:
   image: ArcanaForceXVTheFiend-AC03-JP-NPR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN015
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE015
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR015
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT015
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT015
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   ja:
   - set_number: AC03-JP005
     set_name: Animation Chronicle 2023
@@ -78,7 +83,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 934506
