--- a/data/cards/72323266.yaml
+++ b/data/cards/72323266.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 地缚囚人 岩石清扫者
 text:
   en: |-
-    If a card is in a Field Zone, you can Special Summon this card (from your hand). You can only Special Summon "Earthbound Prisoner Stone Sweeper" once per turn this way. You can discard this card; add 1 Level 3 or lower Fiend Tuner from your Deck to your hand, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Fusion and Synchro Monsters. You can only use this effect of "Earthbound Prisoner Stone Sweeper" once per turn.
+    If there is a card in a Field Zone, you can Special Summon this card (from your hand). You can only Special Summon "Earthbound Prisoner Stone Sweeper" once per turn this way. You can discard this card; add 1 Level 3 or lower Fiend Tuner from your Deck to your hand, also you cannot Special Summon from the Extra Deck for the rest of this turn, except Fusion or Synchro Monsters. You can only use this effect of "Earthbound Prisoner Stone Sweeper" once per turn.
   de:
   es:
   fr:
@@ -43,25 +43,30 @@ images:
   image: EarthboundPrisonerStoneSweeper-AC03-JP-SR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN028
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE028
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR028
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT028
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT028
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   ja:
   - set_number: AC03-JP018
     set_name: Animation Chronicle 2023
@@ -86,7 +91,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 934406
