--- a/data/cards/73046708.yaml
+++ b/data/cards/73046708.yaml
@@ -15,10 +15,10 @@ name:
   zh-CN: 装甲超量
 text:
   en: |-
-    Target 1 face-up monster you control and 1 Xyz Monster in your GY; equip that monster from the GY to that other monster on the field as an Equip Spell with these effects.
-    ● The equipped monster's ATK becomes this card's.
-    ● The equipped monster's Attribute is also treated as this card's.
-    ● If the equipped monster attacked, at the end of the Damage Step: You can send this card to the GY; the monster it was equipped to can make a second attack in a row.
+    Target 1 face-up monster you control and 1 Xyz Monster in your GY; equip that monster from your GY to that monster on the field as an Equip Spell with these effects.
+    ● Change the equipped monster's ATK to this card's ATK.
+    ● The equipped monster gains this card's Attribute.
+    ● At the end of the Damage Step, if the equipped monster attacked: You can send this card to the GY; that attacking monster can make a second attack in a row.
   de:
   es:
   fr:
@@ -50,25 +50,30 @@ images:
   image: ArmoredXyz-AC03-JP-SR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN025
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE025
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR025
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT025
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT025
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   ja:
   - set_number: AC03-JP015
     set_name: Animation Chronicle 2023
@@ -93,7 +98,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 934511
