--- a/data/cards/84384943.yaml
+++ b/data/cards/84384943.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 卡布雷拉石
 text:
   en: |-
-    If this card is Summoned: You can add 1 "Triangle O" from your Deck to your hand, then, if this card is in Attack Position, change it to Defense Position. You can only use this effect of "Cabrera Stone" once per turn. If this card is destroyed by battle or card effect: Take 1000 damage.
+    If this card is Summoned: You can add 1 "Triangle O" from your Deck to your hand, then if this card is in Attack Position, change it to Defense Position. You can only use this effect of "Cabrera Stone" once per turn. If this card is destroyed by battle or card effect: Take 1000 damage.
   de:
   es:
   fr:
@@ -41,25 +41,30 @@ images:
   image: CabreraStone-AC03-JP-NPR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN019
     set_name: Maze of Millennia
     rarities:
+    - Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE019
     set_name: Maze of Millennia
     rarities:
+    - Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR019
     set_name: Maze of Millennia
     rarities:
+    - Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT019
     set_name: Maze of Millennia
     rarities:
+    - Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT019
     set_name: Maze of Millennia
     rarities:
+    - Rare
   ja:
   - set_number: AC03-JP009
     set_name: Animation Chronicle 2023
@@ -73,7 +78,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 928732
