--- a/data/cards/85106525.yaml
+++ b/data/cards/85106525.yaml
@@ -36,25 +36,30 @@ images:
   image: Bonfire-AC03-JP-SR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN016
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE016
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR016
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT016
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT016
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   ja:
   - set_number: AC03-JP006
     set_name: Animation Chronicle 2023
@@ -80,7 +85,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 975638
