--- a/data/cards/86239173.yaml
+++ b/data/cards/86239173.yaml
@@ -44,25 +44,30 @@ images:
   image: HornedSaurus-AC03-JP-NPR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN013
     set_name: Maze of Millennia
     rarities:
+    - Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE013
     set_name: Maze of Millennia
     rarities:
+    - Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR013
     set_name: Maze of Millennia
     rarities:
+    - Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT013
     set_name: Maze of Millennia
     rarities:
+    - Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT013
     set_name: Maze of Millennia
     rarities:
+    - Rare
   ja:
   - set_number: AC03-JP003
     set_name: Animation Chronicle 2023
@@ -76,7 +81,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 928722
