--- a/data/cards/04796100.yaml
+++ b/data/cards/04796100.yaml
@@ -85,6 +85,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: MZMI-EN040
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: ABPF-DE092
     set_name: Absolute Powerforce
@@ -106,6 +110,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: MZMI-DE040
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: ABPF-FR092
     set_name: Absolute Powerforce
@@ -127,6 +135,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: MZMI-FR040
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: ABPF-IT092
     set_name: Absolute Powerforce
@@ -148,6 +160,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: MZMI-IT040
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: YGLD-PTB41
     set_name: Yugi's Legendary Decks
@@ -157,6 +173,10 @@ sets:
     set_name: 'Structure Deck: Yugi Muto'
     rarities:
     - Common
+  - set_number: MZMI-PT040
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: G4-B2
     set_name: 'Yu-Gi-Oh! Duel Monsters 4: Battle of Great Duelist Game Guide 2 promotional card'
