--- a/data/cards/23442438.yaml
+++ b/data/cards/23442438.yaml
@@ -51,6 +51,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: MZMI-EN047
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: LED6-DE026
     set_name: 'Legendary Duelists: Magical Hero'
@@ -60,6 +64,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: MZMI-DE047
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: LED6-FR026
     set_name: 'Legendary Duelists: Magical Hero'
@@ -69,6 +77,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: MZMI-FR047
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: LED6-IT026
     set_name: 'Legendary Duelists: Magical Hero'
@@ -78,6 +90,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: MZMI-IT047
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: LED6-PT026
     set_name: 'Legendary Duelists: Magical Hero'
@@ -87,6 +103,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: MZMI-PT047
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: DP23-JP026
     set_name: 'Duelist Pack: Legend Duelist 6'
