--- a/data/cards/32441317.yaml
+++ b/data/cards/32441317.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: OTS Tournament Pack 22
     rarities:
     - Common
+  - set_number: MZMI-EN046
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   - set_number: DT06-EN092
     set_name: Duel Terminal 6b
     rarities:
@@ -89,6 +93,10 @@ sets:
     set_name: OTS Tournament Pack 22
     rarities:
     - Common
+  - set_number: MZMI-DE046
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: TDGS-FR049
     set_name: The Duelist Genesis
@@ -110,6 +118,10 @@ sets:
     set_name: OTS Tournament Pack 22
     rarities:
     - Common
+  - set_number: MZMI-FR046
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: TDGS-IT049
     set_name: The Duelist Genesis
@@ -131,6 +143,10 @@ sets:
     set_name: OTS Tournament Pack 22
     rarities:
     - Common
+  - set_number: MZMI-IT046
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: LC5D-PT136
     set_name: Legendary Collection 5D's Mega Pack
@@ -144,6 +160,10 @@ sets:
     set_name: OTS Tournament Pack 22
     rarities:
     - Common
+  - set_number: MZMI-PT046
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: TDGS-JP049
     set_name: The Duelist Genesis
