--- a/data/cards/77207191.yaml
+++ b/data/cards/77207191.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: MZMI-EN042
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: ABPF-DE091
     set_name: Absolute Powerforce
@@ -88,6 +92,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: MZMI-DE042
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: ABPF-FR091
     set_name: Absolute Powerforce
@@ -109,6 +117,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: MZMI-FR042
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: ABPF-IT091
     set_name: Absolute Powerforce
@@ -130,6 +142,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: MZMI-IT042
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: YGLD-PTB09
     set_name: Yugi's Legendary Decks
@@ -139,6 +155,10 @@ sets:
     set_name: 'Structure Deck: Yugi Muto'
     rarities:
     - Common
+  - set_number: MZMI-PT042
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: G4-B1
     set_name: 'Yu-Gi-Oh! Duel Monsters 4: Battle of Great Duelist Game Guide 1 promotional card'
