--- a/data/cards/89563150.yaml
+++ b/data/cards/89563150.yaml
@@ -8,7 +8,7 @@ name:
   it: Forza Lucente d'Argento
   pt: Força Prateada Brilhante
   ja: <ruby>白<rt>はく</rt></ruby><ruby>銀<rt>ぎん</rt></ruby>のバリア－シルバーフォース－
-  ja_romaji: Hakugin no Baria - Shirubā Fōsu
+  ja_romaji: Hakugin no Baria -Shirubā Fōsu-
   ko: 백은의 베리어 －실퍼 포스－
   ko_rr:
   zh-TW:
