--- a/data/cards/yugipedia1037584.yaml
+++ b/data/cards/yugipedia1037584.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>蕾禍<rt>ライカ</rt></ruby>ノ<ruby>鎧石竜<rt>ヨロイトカゲ</rt></ruby>
-  ja_romaji: Raika no Yoroi Tokage
+  ja_romaji: Raika no Yoroitokage
   ko:
   ko_rr:
   zh-TW:
