--- a/data/cards/05818798.yaml
+++ b/data/cards/05818798.yaml
@@ -102,6 +102,10 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: MZMI-EN041
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   - set_number: MRD-124
     set_name: Metal Raiders
     rarities:
@@ -159,6 +163,10 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: MZMI-DE041
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: MRD-F124
     set_name: Metal Raiders
@@ -200,6 +208,10 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: MZMI-FR041
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: PMT-I124
     set_name: Metal Raiders
@@ -241,6 +253,10 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: MZMI-IT041
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: PMT-P124
     set_name: Metal Raiders
@@ -262,6 +278,10 @@ sets:
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
     - Common
+  - set_number: MZMI-PT041
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: WJ-03
     set_name: 'Limited Edition 2: Yugi Pack'
