--- a/data/cards/06351147.yaml
+++ b/data/cards/06351147.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 事务回滚
 text:
   en: |-
-    Pay half your LP, then target 1 Normal Trap in your opponent's GY, except "Transaction Rollback"; this effect becomes that Normal Trap's effect when that card is activated. You can banish this card from your GY and pay half your LP, then target 1 Normal Trap in your GY, except "Transaction Rollback"; this effect becomes that Normal Trap's effect when that card is activated. You can only use 1 "Transaction Rollback" effect per turn, and only once that turn.
+    Pay half your LP, then target 1 Normal Trap in your opponent's GY, except "Transaction Rollback"; this effect becomes that card's activation effect. You can banish this card from your GY and pay half your LP, then target 1 Normal Trap in your GY, except "Transaction Rollback"; this effect becomes that card's activation effect. You can only use 1 "Transaction Rollback" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -35,25 +35,35 @@ images:
   image: TransactionRollback-AC03-JP-NPR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN038
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
+    - Collector's Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE038
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
+    - Collector's Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR038
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
+    - Collector's Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT038
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
+    - Collector's Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT038
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: AC03-JP028
     set_name: Animation Chronicle 2023
@@ -67,7 +77,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 928730
