--- a/data/cards/09742784.yaml
+++ b/data/cards/09742784.yaml
@@ -62,6 +62,11 @@ sets:
     set_name: 'Legendary Duelists: Magical Hero'
     rarities:
     - Common
+  - set_number: MZMI-EN044
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
+    - Collector's Rare
   de:
   - set_number: SDSE-DE001
     set_name: Synchron Extreme Structure Deck
@@ -75,6 +80,11 @@ sets:
     set_name: 'Legendary Duelists: Magical Hero'
     rarities:
     - Common
+  - set_number: MZMI-DE044
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
+    - Collector's Rare
   fr:
   - set_number: SDSE-FR001
     set_name: Synchron Extreme Structure Deck
@@ -88,6 +98,11 @@ sets:
     set_name: 'Legendary Duelists: Magical Hero'
     rarities:
     - Common
+  - set_number: MZMI-FR044
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
+    - Collector's Rare
   it:
   - set_number: SDSE-IT001
     set_name: Synchron Extreme Structure Deck
@@ -101,6 +116,11 @@ sets:
     set_name: 'Legendary Duelists: Magical Hero'
     rarities:
     - Common
+  - set_number: MZMI-IT044
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
+    - Collector's Rare
   pt:
   - set_number: SDSE-PT001
     set_name: Synchron Extreme Structure Deck
@@ -114,6 +134,11 @@ sets:
     set_name: 'Legendary Duelists: Magical Hero'
     rarities:
     - Common
+  - set_number: MZMI-PT044
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
+    - Collector's Rare
   ja:
   - set_number: SD28-JP001
     set_name: 'Structure Deck: Synchron Extreme'
