--- a/data/cards/10666000.yaml
+++ b/data/cards/10666000.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2+ Level 8 monsters
-    Once per turn, during your Standby Phase: You can attach 1 card from your opponent's GY to this card as material. You can only use each of the following effects of "Number 1: Infection Buzzking" once per turn. If this card is Xyz Summoned: You can look at your opponent's Extra Deck and send 1 card from it to the GY. You can detach 1 material from this card, then target 1 card your opponent controls; destroy it, then, if you destroyed a face-up monster, inflict damage to your opponent equal to half the ATK that monster had on the field.
+    Once per turn, during your Standby Phase: You can attach 1 card from your opponent's GY to this card as material. You can only use each of the following effects of "Number 1: Infection Buzzking" once per turn. If this card is Xyz Summoned: You can look at your opponent's Extra Deck and send 1 card from it to the GY. You can detach 1 material from this card, then target 1 card your opponent controls; destroy it, then if you destroyed a face-up monster, inflict damage to your opponent equal to half the ATK it had on the field.
   de:
   es:
   fr:
@@ -46,25 +46,35 @@ images:
   image: Number1InfectionBuzzking-AC03-JP-SR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN023
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
+    - Collector's Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE023
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
+    - Collector's Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR023
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
+    - Collector's Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT023
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
+    - Collector's Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT023
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: AC03-JP013
     set_name: Animation Chronicle 2023
@@ -82,7 +92,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 973004
