--- a/data/cards/10875327.yaml
+++ b/data/cards/10875327.yaml
@@ -61,6 +61,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Ultra Rare
+  - set_number: MZMI-EN048
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   - set_number: CT06-ENS02
     set_name: Collectible Tins Exclusive 2009
     rarities:
@@ -79,6 +83,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Ultra Rare
+  - set_number: MZMI-DE048
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: RGBT-FR019
     set_name: Raging Battle
@@ -93,6 +101,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Ultra Rare
+  - set_number: MZMI-FR048
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: RGBT-IT019
     set_name: Raging Battle
@@ -107,6 +119,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Ultra Rare
+  - set_number: MZMI-IT048
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: LC5D-PT146
     set_name: Legendary Collection 5D's Mega Pack
@@ -116,6 +132,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Ultra Rare
+  - set_number: MZMI-PT048
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: RGBT-JP019
     set_name: Raging Battle
