--- a/data/cards/22723778.yaml
+++ b/data/cards/22723778.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     "Reign-Beaux, Overlord of Dark World" + 2+ Fiend monsters
-    If this card is Fusion Summoned: You can destroy all cards your opponent controls. This card's original ATK/DEF become the number of Fusion Materials used for its Summon x 1000. Once per turn (Quick Effect): You can target 1 face-up card you control; discard 1 card, also your opponent cannot target that face-up card with card effects this turn.
+    If this card is Fusion Summoned: You can destroy all cards your opponent controls. This card's original ATK/DEF each become the number of materials used for its Summon x 1000. Once per turn (Quick Effect): You can target 1 face-up card you control; discard 1 card, also your opponent cannot target that face-up card with card effects for the rest of this turn.
   de:
   es:
   fr:
@@ -46,25 +46,30 @@ images:
   image: ClorlessChaosKingofDarkWorld-AC03-JP-UR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN014
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE014
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR014
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT014
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT014
     set_name: Maze of Millennia
     rarities:
+    - Super Rare
   ja:
   - set_number: AC03-JP004
     set_name: Animation Chronicle 2023
@@ -80,7 +85,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 928724
