--- a/data/cards/25861589.yaml
+++ b/data/cards/25861589.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 芬芳调香
 text:
   en: |-
-    Discard 1 card; place 1 "Humid Winds", "Dried Winds", or "Blessed Winds" from your hand or Deck face-up in your Spell & Trap Zone. You can banish this card from your GY; Fusion Summon 1 Plant Fusion Monster from your Extra Deck, by banishing materials mentioned on it from your hand and/or field. If your LP are higher than your opponent's, you can also banish Plant monsters from your GY as material. You can only use each effect of "Aroma Blend" once per turn.
+    Discard 1 card; place 1 "Humid Winds", "Dried Winds", or "Blessed Winds" from your hand or Deck face-up in your Spell & Trap Zone. You can banish this card from your GY; Fusion Summon 1 Plant Fusion Monster from your Extra Deck, by banishing its materials from your hand and/or field. If your LP are higher than your opponent's, you can also banish Plant monsters from your GY as material. You can only use each effect of "Aroma Blend" once per turn.
   de:
   es:
   fr:
