--- a/data/cards/33099732.yaml
+++ b/data/cards/33099732.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     You can activate 1 of these effects (but you can only use each effect of "Over Future Fusion" once per turn);
     ● Reveal 1 Fusion Monster in your Extra Deck and send 1 of the Fusion Materials mentioned on it by name from your Deck to the GY, and if you do, you cannot Special Summon monsters with that name, nor activate their monster effects, for the rest of this turn.
-    ● Fusion Summon 1 DARK Machine Fusion Monster from your Extra Deck, by banishing Fusion Materials mentioned on it from your GY.
+    ● Fusion Summon 1 DARK Machine Fusion Monster from your Extra Deck, by banishing its materials from your GY.
   de:
   es:
   fr:
