--- a/data/cards/45836982.yaml
+++ b/data/cards/45836982.yaml
@@ -58,6 +58,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: MZMI-EN050
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: LED5-DE023
     set_name: 'Legendary Duelists: Immortal Destiny'
@@ -67,6 +71,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: MZMI-DE050
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: LED5-FR023
     set_name: 'Legendary Duelists: Immortal Destiny'
@@ -76,6 +84,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: MZMI-FR050
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: LED5-IT023
     set_name: 'Legendary Duelists: Immortal Destiny'
@@ -85,6 +97,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: MZMI-IT050
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: LED5-PT023
     set_name: 'Legendary Duelists: Immortal Destiny'
@@ -94,6 +110,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: MZMI-PT050
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: DP22-JP023
     set_name: 'Duelist Pack: Legend Duelist 5'
