--- a/data/cards/47051709.yaml
+++ b/data/cards/47051709.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 光子三角翼
 text:
   en: |-
-    If this card is Normal Summoned: You can Special Summon 1 "Photon Delta Wing" from your hand or Deck in Defense Position, also you cannot Special Summon monsters for the rest of this turn, except LIGHT monsters. While you control another "Photon Delta Wing", your opponent cannot declare an attack.
+    If this card is Normal Summoned: You can Special Summon 1 "Photon Delta Wing" from your hand or Deck in Defense Position, also you cannot Special Summon for the rest of this turn, except LIGHT monsters. Your opponent cannot declare an attack while you control another "Photon Delta Wing".
   de:
   es:
   fr:
@@ -41,25 +41,30 @@ images:
   image: PhotonDeltaWing-AC03-JP-SR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN024
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE024
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR024
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT024
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT024
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   ja:
   - set_number: AC03-JP014
     set_name: Animation Chronicle 2023
@@ -75,7 +80,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 975319
