--- a/data/cards/53855409.yaml
+++ b/data/cards/53855409.yaml
@@ -71,6 +71,10 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ultra Rare
+  - set_number: MZMI-EN043
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   de:
   - set_number: STOR-DE002
     set_name: Storm of Ragnarok
@@ -92,6 +96,10 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ultra Rare
+  - set_number: MZMI-DE043
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   fr:
   - set_number: STOR-FR002
     set_name: Storm of Ragnarok
@@ -113,6 +121,10 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ultra Rare
+  - set_number: MZMI-FR043
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   it:
   - set_number: STOR-IT002
     set_name: Storm of Ragnarok
@@ -134,6 +146,10 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ultra Rare
+  - set_number: MZMI-IT043
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   pt:
   - set_number: LC5D-PT020
     set_name: Legendary Collection 5D's Mega Pack
@@ -151,6 +167,10 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ultra Rare
+  - set_number: MZMI-PT043
+    set_name: Maze of Millennia
+    rarities:
+    - Rare
   ja:
   - set_number: STOR-JP002
     set_name: Storm of Ragnarok
