--- a/data/cards/70366448.yaml
+++ b/data/cards/70366448.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 猛攻抽卡
 text:
   en: |-
-    Banish all monsters you control (min. 2); draw 3 cards. You cannot Normal or Special Summon monsters the turn you activate this card, except Cyberse monsters. You can only activate 1 "Drastic Draw" per turn.
+    Banish all monsters you control (min. 2); draw 3 cards. You cannot Normal or Special Summon the turn you activate this card, except Cyberse monsters. You can only activate 1 "Drastic Draw" per turn.
   de:
   es:
   fr:
@@ -35,25 +35,30 @@ images:
   image: DrasticDraw-AC03-JP-NPR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN037
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE037
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR037
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT037
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT037
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   ja:
   - set_number: AC03-JP027
     set_name: Animation Chronicle 2023
@@ -69,7 +74,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 928729
