--- a/data/cards/yugipedia1037582.yaml
+++ b/data/cards/yugipedia1037582.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>蕾禍<rt>ライカ</rt></ruby>ノ<ruby>矢筈天牛<rt>ヤハズカミキリ</rt></ruby>
-  ja_romaji: Raika no Yahazu Kamikiri
+  ja_romaji: Raika no Yahazukamikiri
   ko:
   ko_rr:
   zh-TW:
